--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2884,7 +2884,6 @@ payload:
   - '+.3694c.com'
   - '+.369785.com'
   - '+.3699.cc'
-  - '+.36992.com'
   - '+.3699wan.com'
   - '+.369wenku.com'
   - '+.369xxw.com'
@@ -2909,7 +2908,6 @@ payload:
   - '+.3710167.com'
   - '+.37163.com'
   - '+.37168.com'
-  - '+.371fangte.com'
   - '+.371house.com'
   - '+.371love.com'
   - '+.371zy.com'
@@ -4463,7 +4461,6 @@ payload:
   - '+.55lady.net'
   - '+.55shantao.com'
   - '+.55tuan.com'
-  - '+.55tuanimg.com'
   - '+.55xiazai.com'
   - '+.55xoxo.vip'
   - '+.55y5.com'
@@ -6810,7 +6807,6 @@ payload:
   - '+.99weiqi.com'
   - '+.99wuxian.com'
   - '+.99xr.com'
-  - '+.99xyx.com'
   - '+.99youmeng.com'
   - '+.99ys.com'
   - '+.99zhizhu.com'
@@ -7045,6 +7041,7 @@ payload:
   - '+.abifsey.com'
   - '+.abilie.com'
   - '+.abitcg.com'
+  - '+.abite.com'
   - '+.abiz.com'
   - '+.ablanxue.com'
   - '+.able-elec.com'
@@ -14182,7 +14179,6 @@ payload:
   - '+.chipmanufacturing.org'
   - '+.chiponeic.com'
   - '+.chipown.com'
-  - '+.chiprf.com'
   - '+.chipsbank.com'
   - '+.chipsec.com'
   - '+.chipsgo.com'
@@ -15860,7 +15856,6 @@ payload:
   - '+.cosplay8.com'
   - '+.cosplayla.com'
   - '+.cosyjoy.com'
-  - '+.cosyroom.biz'
   - '+.coubei.com'
   - '+.counect.com'
   - '+.couns.com'
@@ -16167,7 +16162,6 @@ payload:
   - '+.crmg-ms.com'
   - '+.crmgz.com'
   - '+.crmip.com'
-  - '+.crnds.com'
   - '+.crnews.net'
   - '+.crodigy.com'
   - '+.crossingstarstudio.com'
@@ -17052,7 +17046,6 @@ payload:
   - '+.danotest.com'
   - '+.danpin.com'
   - '+.danqi.com'
-  - '+.danqingshaonian.com'
   - '+.danteng.me'
   - '+.dantengge.org'
   - '+.dantuvc.com'
@@ -17486,7 +17479,6 @@ payload:
   - '+.deehai.com'
   - '+.deemob.com'
   - '+.deemos.com'
-  - '+.deepano.com'
   - '+.deepbluenetwork.com'
   - '+.deepcloudsdp.com'
   - '+.deepdevelop.com'
@@ -18862,7 +18854,6 @@ payload:
   - '+.drmaml.com'
   - '+.droi.com'
   - '+.droibaas.com'
-  - '+.dropboxchina.com'
   - '+.dropsec.xyz'
   - '+.drouma.com'
   - '+.drscrewdriver.com'
@@ -20917,6 +20908,7 @@ payload:
   - '+.fangjiadp.com'
   - '+.fangkeduo.net'
   - '+.fangkewang.com'
+  - '+.fangkuai.link'
   - '+.fangkuaiwang.com'
   - '+.fangkuaiyi.com'
   - '+.fanglakeji.com'
@@ -29000,7 +28992,6 @@ payload:
   - '+.ikonke.com'
   - '+.ikoo8.com'
   - '+.ikozn.com'
-  - '+.ikrsx.xyz'
   - '+.iksea.com'
   - '+.iku.cool'
   - '+.iku8.com'
@@ -33840,7 +33831,6 @@ payload:
   - '+.kukuchuangxiang1.com'
   - '+.kukuchuangxiang4.com'
   - '+.kukud.net'
-  - '+.kukudesk.com'
   - '+.kukulv.com'
   - '+.kukumai.com'
   - '+.kukupig.com'
@@ -34791,6 +34781,7 @@ payload:
   - '+.lequz.com'
   - '+.lerengu.com'
   - '+.lergao.com'
+  - '+.lerist.dev'
   - '+.lers123.com'
   - '+.lers168.com'
   - '+.lers168.net'
@@ -37519,7 +37510,6 @@ payload:
   - '+.meizu.com.hk'
   - '+.meizu.com'
   - '+.meizu.net'
-  - '+.meke-shanghai.com'
   - '+.meke8.com'
   - '+.melanecholy.com'
   - '+.meldingcloud.com'
@@ -39684,6 +39674,7 @@ payload:
   - '+.newsv5.com'
   - '+.newsxc.com'
   - '+.newsyc.com'
+  - '+.newszjk.com'
   - '+.newtalentaward.com'
   - '+.newtonghua.com'
   - '+.newtop100.com'
@@ -40022,7 +40013,6 @@ payload:
   - '+.nmvps.com'
   - '+.nmweidian.com'
   - '+.nmxc.ltd'
-  - '+.nmysyey.com'
   - '+.nmzh.net'
   - '+.nn.com'
   - '+.nn12333.com'
@@ -40041,7 +40031,6 @@ payload:
   - '+.nnmutong.com'
   - '+.nnn666.com'
   - '+.nnnews.net'
-  - '+.nnsbbs.com'
   - '+.nnsc6.com'
   - '+.nnsky.com'
   - '+.nnszwl.com'
@@ -44056,7 +44045,6 @@ payload:
   - '+.quwm.com'
   - '+.quwuxian.com'
   - '+.quxds.com'
-  - '+.quxia.com'
   - '+.quxianchang.com'
   - '+.quxianzhuan.com'
   - '+.quxingdong.com'
@@ -45118,6 +45106,7 @@ payload:
   - '+.ruvisas.com'
   - '+.ruxi.online'
   - '+.ruyig.com'
+  - '+.ruyigu.com'
   - '+.ruyile.com'
   - '+.ruyim.com'
   - '+.ruyimjg.com'
@@ -45820,7 +45809,6 @@ payload:
   - '+.secwk.com'
   - '+.secwx.com'
   - '+.secxun.com'
-  - '+.sed3.com'
   - '+.see-far.com'
   - '+.see-source.com'
   - '+.seebug.org'
@@ -50738,7 +50726,6 @@ payload:
   - '+.tiyep.com'
   - '+.tiyu21.com'
   - '+.tiyu68.com'
-  - '+.tiyudaka.com'
   - '+.tiyufeng.com'
   - '+.tiyule.com'
   - '+.tiyusaishi.com'
@@ -51236,6 +51223,7 @@ payload:
   - '+.toycloud.com'
   - '+.toyean.com'
   - '+.toysir.com'
+  - '+.tozzger.info'
   - '+.tp8.me'
   - '+.tpbook.com'
   - '+.tpcdnde88de.com'
@@ -52026,7 +52014,6 @@ payload:
   - '+.tzsysp.com'
   - '+.tztusi.com'
   - '+.tzvtc.com'
-  - '+.tzxgzk.com'
   - '+.tzxingtang.com'
   - '+.tzxwzx.com'
   - '+.tzye123.com'
@@ -52300,7 +52287,6 @@ payload:
   - '+.ukelink.com'
   - '+.uker.net'
   - '+.ukh5.com'
-  - '+.ukjlksdf.com'
   - '+.ukolmv.com'
   - '+.ukongm.com'
   - '+.ukonline2000.com'
@@ -56062,6 +56048,7 @@ payload:
   - '+.wyaoqing.com'
   - '+.wybbao.com'
   - '+.wybgs.com'
+  - '+.wycfw.com'
   - '+.wycntv.com'
   - '+.wydbw.com'
   - '+.wydfghjjh.live'
@@ -57861,7 +57848,6 @@ payload:
   - '+.xml-data.org'
   - '+.xml-journal.net'
   - '+.xmlhifi.com'
-  - '+.xmlure.com'
   - '+.xmlvbarcode.com'
   - '+.xmmade.com'
   - '+.xmmama.com'
@@ -60401,7 +60387,6 @@ payload:
   - '+.youxi01.com'
   - '+.youxi369.com'
   - '+.youxi377.com'
-  - '+.youxi500.com'
   - '+.youxi528.com'
   - '+.youxi567.com'
   - '+.youxia.com'
@@ -60940,6 +60925,7 @@ payload:
   - '+.yuming.com'
   - '+.yumingguwen.com'
   - '+.yumixitong.com'
+  - '+.yummy.tech'
   - '+.yumstone.com'
   - '+.yun-gu.com'
   - '+.yun-idc.com'
@@ -63352,7 +63338,6 @@ payload:
   - '+.zjydt.com'
   - '+.zjyiot.com'
   - '+.zjyiqiao.com'
-  - '+.zjykjy.com'
   - '+.zjyyang.com'
   - '+.zjyygy.com'
   - '+.zjzdgj.com'
@@ -64059,7 +64044,6 @@ payload:
   - '+.zxzyl.com'
   - '+.zxzyy.com'
   - '+.zy-cam.com'
-  - '+.zy147.com'
   - '+.zy728.com'
   - '+.zy91.com'
   - '+.zyan.cc'
