--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2655,7 +2655,6 @@ payload:
   - '+.35zww.com'
   - '+.36.la'
   - '+.360-bo.tv'
-  - '+.360-bt.com'
   - '+.360-g.net'
   - '+.360-game.net'
   - '+.360-jr.com'
@@ -4954,7 +4953,6 @@ payload:
   - '+.623k.com'
   - '+.62669.com'
   - '+.626x.com'
-  - '+.62730.com'
   - '+.628.com'
   - '+.62897.biz'
   - '+.629600.com'
@@ -10070,7 +10068,6 @@ payload:
   - '+.beidouone.com'
   - '+.beidousafety.org'
   - '+.beidouxingxueche.com'
-  - '+.beierqi.com'
   - '+.beieryouxi.com'
   - '+.beifabook.com'
   - '+.beifang.net'
@@ -10624,6 +10621,7 @@ payload:
   - '+.biquguan.com'
   - '+.biqukan.com'
   - '+.biquke.com'
+  - '+.biquke.me'
   - '+.biquku.co'
   - '+.biquku.la'
   - '+.biqukun.la'
@@ -13146,6 +13144,7 @@ payload:
   - '+.chanumber.com'
   - '+.chanway.net'
   - '+.chanwind.com'
+  - '+.chanxuehezuo.com'
   - '+.chanyeren.com'
   - '+.chanzhi.org'
   - '+.chanzuimei.com'
@@ -19467,6 +19466,7 @@ payload:
   - '+.easeyedelivery.com'
   - '+.easilysend.com'
   - '+.easitcn.com'
+  - '+.easonad.com'
   - '+.eassos.com'
   - '+.east.net'
   - '+.eastall.com'
@@ -20068,7 +20068,6 @@ payload:
   - '+.elikeme.com'
   - '+.elikeme.net'
   - '+.elitecrm.com'
-  - '+.elitejlb.com'
   - '+.eliushi.com'
   - '+.eliwang.com'
   - '+.elkpi.com'
@@ -20751,7 +20750,6 @@ payload:
   - '+.eztvnet.com'
   - '+.ezucoo.com'
   - '+.ezwan.com'
-  - '+.ezwebtest.com'
   - '+.f-0.cc'
   - '+.f-stack.org'
   - '+.f.cx'
@@ -23070,7 +23068,6 @@ payload:
   - '+.gffwq.com'
   - '+.gfglb.com'
   - '+.gfjl.org'
-  - '+.gfnormal00an.com'
   - '+.gfrtrttweet.com'
   - '+.gfttek.com'
   - '+.gftuan.com'
@@ -24140,7 +24137,6 @@ payload:
   - '+.guohanlawfirm.com'
   - '+.guohuahouxin.com'
   - '+.guohuapharm.com'
-  - '+.guohuolin.com'
   - '+.guoji.biz'
   - '+.guojiang.tv'
   - '+.guojianglive.com'
@@ -33829,7 +33825,6 @@ payload:
   - '+.kukecloud.com'
   - '+.kukseo.com'
   - '+.kukuchuangxiang1.com'
-  - '+.kukuchuangxiang4.com'
   - '+.kukud.net'
   - '+.kukulv.com'
   - '+.kukumai.com'
@@ -33980,7 +33975,6 @@ payload:
   - '+.kxdao.com'
   - '+.kxdpm.com'
   - '+.kxdw.com'
-  - '+.kxewpz.com'
   - '+.kxfsw.com'
   - '+.kxgcw.com'
   - '+.kxiaoshuo77.com'
@@ -34523,7 +34517,6 @@ payload:
   - '+.ldkj-zs.com'
   - '+.ldmap.net'
   - '+.ldmnq.com'
-  - '+.ldnovel.com'
   - '+.ldpsfa.com'
   - '+.ldqxn.com'
   - '+.ldshj.com'
@@ -37565,6 +37558,7 @@ payload:
   - '+.mengxintianxia.com'
   - '+.mengyou.org'
   - '+.mengyuangu.com'
+  - '+.mengyuanshucheng.com'
   - '+.mengyuzhe.com'
   - '+.mengzhou.com'
   - '+.mengzhuangxiu.com'
@@ -40394,7 +40388,6 @@ payload:
   - '+.o8tv.com'
   - '+.oa025.com'
   - '+.oa0351.com'
-  - '+.oa169.com'
   - '+.oa25.org'
   - '+.oa5588.com'
   - '+.oa8000.com'
@@ -40779,6 +40772,7 @@ payload:
   - '+.open-falcon.org'
   - '+.open-open.com'
   - '+.open189.net'
+  - '+.openailab.com'
   - '+.openaizh.com'
   - '+.openanolis.org'
   - '+.openasic.org'
@@ -41064,7 +41058,6 @@ payload:
   - '+.ouyingyimin.com'
   - '+.ouzhougoufang.com'
   - '+.ovalechina.com'
-  - '+.ovbook.com'
   - '+.ovcreative.com'
   - '+.ovdream.com'
   - '+.ovear.info'
@@ -42361,7 +42354,6 @@ payload:
   - '+.pro6e.com'
   - '+.procar.cc'
   - '+.processon.com'
-  - '+.procreate.love'
   - '+.product1.djicdn.com'
   - '+.productivity.wiki'
   - '+.proginn.com'
@@ -43124,6 +43116,7 @@ payload:
   - '+.qijuan.com'
   - '+.qijucn.com'
   - '+.qikan.com'
+  - '+.qikanmulu.com'
   - '+.qikanw.com'
   - '+.qikegu.com'
   - '+.qikekeji.com'
@@ -45858,7 +45851,6 @@ payload:
   - '+.segotep.com'
   - '+.segwayrobotics.com'
   - '+.seidns.com'
-  - '+.seikim.com'
   - '+.seinfeldtv.com'
   - '+.seisman.info'
   - '+.sejai.com'
@@ -45924,7 +45916,6 @@ payload:
   - '+.seo.tm'
   - '+.seo123.net'
   - '+.seo628.com'
-  - '+.seo8o.com'
   - '+.seocxw.com'
   - '+.seodaniel.com'
   - '+.seofangfa.com'
@@ -50089,7 +50080,6 @@ payload:
   - '+.teddymobile.net'
   - '+.tedx.net'
   - '+.tedxalc.com'
-  - '+.tee7.com'
   - '+.teein.com'
   - '+.teencn.com'
   - '+.teeqee.com'
@@ -56944,7 +56934,6 @@ payload:
   - '+.xiaoshengqi8.com'
   - '+.xiaoshentui.com'
   - '+.xiaoshijie.com'
-  - '+.xiaoshitou123.com'
   - '+.xiaoshituina.vip'
   - '+.xiaoshouhudong.com'
   - '+.xiaoshoukuaifa.com'
@@ -56962,6 +56951,7 @@ payload:
   - '+.xiaoshuodaquan.com'
   - '+.xiaoshuoli.com'
   - '+.xiaoshuoshu.org'
+  - '+.xiaoshuowu.com'
   - '+.xiaoshuozu.com'
   - '+.xiaoshuxiong.com'
   - '+.xiaositv.com'
@@ -57280,6 +57270,7 @@ payload:
   - '+.xingkongmt.com'
   - '+.xingkoo.com'
   - '+.xingkuad.com'
+  - '+.xingkupai.com'
   - '+.xinglai.com'
   - '+.xinglinpukang.com'
   - '+.xinglongdayuan.com'
@@ -58482,7 +58473,6 @@ payload:
   - '+.xxyfgy.com'
   - '+.xxyhzd.com'
   - '+.xxyo.com'
-  - '+.xxysvip.com'
   - '+.xxyw.com'
   - '+.xxzfgjj.com'
   - '+.xxzhushou.com'
@@ -60617,6 +60607,7 @@ payload:
   - '+.ysgfood.com'
   - '+.ysgtg.com'
   - '+.ysgushi.com'
+  - '+.yshlmlr.com'
   - '+.yshp.net'
   - '+.yshsports.com'
   - '+.ysicing.me'
@@ -60625,7 +60616,6 @@ payload:
   - '+.ysiis.com'
   - '+.ysjf.com'
   - '+.ysjgames.com'
-  - '+.ysjhchina.net'
   - '+.ysjpin.com'
   - '+.yskjzj.com'
   - '+.yslcw.com'
@@ -64090,7 +64080,6 @@ payload:
   - '+.zymkcdn.com'
   - '+.zymreal.com'
   - '+.zymxp.com'
-  - '+.zyngaceme.com'
   - '+.zyoffice.com'
   - '+.zyoogame.com'
   - '+.zyops.com'
