--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2214,7 +2214,6 @@ payload:
   - '+.265o.com'
   - '+.265ps.com'
   - '+.266.la'
-  - '+.266555c.com'
   - '+.266680.com'
   - '+.266wan.com'
   - '+.2672721.xyz'
@@ -5158,7 +5157,6 @@ payload:
   - '+.68h5.com'
   - '+.68hanchen.com'
   - '+.68hr.com'
-  - '+.68jt.com'
   - '+.68play.com'
   - '+.68team.com'
   - '+.68web.net'
@@ -6376,7 +6374,6 @@ payload:
   - '+.92.net'
   - '+.921.com'
   - '+.9211.com'
-  - '+.921686.com'
   - '+.921716.com'
   - '+.9217web.com'
   - '+.921lu.com'
@@ -6706,7 +6703,6 @@ payload:
   - '+.996.pm'
   - '+.9966.org'
   - '+.9966333.com'
-  - '+.99665.at'
   - '+.9966886699.com'
   - '+.9966w.com'
   - '+.996a.com'
@@ -10391,6 +10387,7 @@ payload:
   - '+.bibibi.net'
   - '+.bibiku.com'
   - '+.bibuzhengxing.com'
+  - '+.bicpaedu.com'
   - '+.bicredit.xin'
   - '+.bid-view.com'
   - '+.bidchance.com'
@@ -26315,7 +26312,6 @@ payload:
   - '+.hkstv.tv'
   - '+.hkszetsair.com'
   - '+.hkt4.com'
-  - '+.hktzschool.com'
   - '+.hkvisen.com'
   - '+.hkwb.net'
   - '+.hkxbjt.com'
@@ -26691,6 +26687,7 @@ payload:
   - '+.hongxiaolong.com'
   - '+.hongxin18.com'
   - '+.hongxingzn.com'
+  - '+.hongxintaji.com'
   - '+.hongxiu.cc'
   - '+.hongxiu.com'
   - '+.hongyan.info'
@@ -27636,7 +27633,6 @@ payload:
   - '+.hunbohui.info'
   - '+.hunbys.com'
   - '+.hunche.net'
-  - '+.hunchelaila.com'
   - '+.hundredcent.com'
   - '+.hundsun.com'
   - '+.hundun.net'
@@ -31162,7 +31158,6 @@ payload:
   - '+.jingzhunyunting.com'
   - '+.jingzhusz.com'
   - '+.jinhe-energy.com'
-  - '+.jinhengjgj.com'
   - '+.jinher.com'
   - '+.jinheshiye.com'
   - '+.jinhongchina.com'
@@ -34877,6 +34872,7 @@ payload:
   - '+.lezhuan.com'
   - '+.lezhuan168.com'
   - '+.lezhuan365.com'
+  - '+.lezhun.com'
   - '+.lezi.com'
   - '+.lezuan.net'
   - '+.lezuan9.com'
@@ -42893,7 +42889,6 @@ payload:
   - '+.qian-gua.com'
   - '+.qianba.com'
   - '+.qianbao.com'
-  - '+.qianbao666.com'
   - '+.qianbaocard.com'
   - '+.qianbaohr.com'
   - '+.qiancheng.me'
@@ -43424,7 +43419,6 @@ payload:
   - '+.qiyoujiage.com'
   - '+.qiyouwang.com'
   - '+.qiyouworld.com'
-  - '+.qiyouyuan.com'
   - '+.qiyouzy.com'
   - '+.qiyqh.com'
   - '+.qiytech.com'
@@ -44820,7 +44814,6 @@ payload:
   - '+.rongshuxia.com'
   - '+.rongstone.com'
   - '+.rongtai-china.com'
-  - '+.rongxingvr.cc'
   - '+.rongxinzh.com'
   - '+.rongyao666.com'
   - '+.rongyi.com'
@@ -45696,7 +45689,6 @@ payload:
   - '+.sdongpo.com'
   - '+.sdoprofile.com'
   - '+.sdpku.com'
-  - '+.sdqifushebei.com'
   - '+.sdqlkr.com'
   - '+.sdqmy.com'
   - '+.sdqoi2d.com'
@@ -48376,6 +48368,7 @@ payload:
   - '+.ssby.cc'
   - '+.sscity.org'
   - '+.sscmwl.com'
+  - '+.sscom.vip'
   - '+.ssdata.com'
   - '+.ssdax.com'
   - '+.ssdfans.com'
@@ -49238,7 +49231,6 @@ payload:
   - '+.syxwang.com'
   - '+.syxwnet.com'
   - '+.syyqls.com'
-  - '+.syys8.com'
   - '+.syyx.com'
   - '+.syyyking.com'
   - '+.syzlzz.com'
@@ -50263,6 +50255,7 @@ payload:
   - '+.tgbus.com'
   - '+.tgcid.org'
   - '+.tgcook.com'
+  - '+.tgddsads.com'
   - '+.tghello.com'
   - '+.tgjh.com'
   - '+.tgking.net'
@@ -60587,6 +60580,7 @@ payload:
   - '+.ys1688.cc'
   - '+.ys2345.com'
   - '+.ys4fun.com'
+  - '+.ys630.com'
   - '+.ys7.com'
   - '+.ys720.com'
   - '+.ys8.com'
@@ -60816,7 +60810,6 @@ payload:
   - '+.yuelun.com'
   - '+.yueme.tv'
   - '+.yuemei.com'
-  - '+.yuenei.com'
   - '+.yuenshui.com'
   - '+.yuenwooping-truelegend.com'
   - '+.yuepaijia.com'
