--- a/directbak.yaml
+++ b/directbak.yaml
@@ -7314,6 +7314,7 @@ payload:
   - '+.adxvip.com'
   - '+.adxwork.com'
   - '+.adyounger.com'
+  - '+.adysimg.com'
   - '+.adyun.com'
   - '+.adzar-energy.com'
   - '+.adzh.com'
@@ -8802,7 +8803,6 @@ payload:
   - '+.arkread.com'
   - '+.arkteam.net'
   - '+.arliki.com'
-  - '+.arm001.com'
   - '+.arm9.net'
   - '+.arm9home.net'
   - '+.armbbs.net'
@@ -17741,7 +17741,6 @@ payload:
   - '+.dgwtrl.com'
   - '+.dgxbjg.com'
   - '+.dgxinde.net'
-  - '+.dgxinyuds.com'
   - '+.dgxue.com'
   - '+.dgyejia.com'
   - '+.dgygpx.com'
@@ -26133,7 +26132,6 @@ payload:
   - '+.hijoys.com'
   - '+.hikailink.com'
   - '+.hikcreate.com'
-  - '+.hikedj.com'
   - '+.hiklife.com'
   - '+.hikoon.com'
   - '+.hikops.com'
@@ -48372,6 +48370,7 @@ payload:
   - '+.ssdata.com'
   - '+.ssdax.com'
   - '+.ssdfans.com'
+  - '+.ssdzg.com'
   - '+.sseinfo.com'
   - '+.ssf.cc'
   - '+.ssfiction.com'
@@ -56810,6 +56809,7 @@ payload:
   - '+.xiaohulu.com'
   - '+.xiaohuochai.cc'
   - '+.xiaohuochai.site'
+  - '+.xiaohus.com'
   - '+.xiaohuwl.com'
   - '+.xiaoice.com'
   - '+.xiaoj.com'
@@ -58730,7 +58730,6 @@ payload:
   - '+.yanglong.pro'
   - '+.yangluojob.com'
   - '+.yangmao.info'
-  - '+.yangmaodang.org'
   - '+.yangmaohao.net'
   - '+.yangner.com'
   - '+.yangqianguan.com'
