--- a/directbak.yaml
+++ b/directbak.yaml
@@ -257,7 +257,6 @@ payload:
   - '+.0371wang.com'
   - '+.037201.com'
   - '+.037398.com'
-  - '+.0376news.com'
   - '+.0378zz.com'
   - '+.0379home.com'
   - '+.0379pfw.com'
@@ -1367,7 +1366,6 @@ payload:
   - '+.17207.com'
   - '+.172222.com'
   - '+.17284.net'
-  - '+.172c.com'
   - '+.172tt.com'
   - '+.173.com'
   - '+.1732.com'
@@ -1417,7 +1415,6 @@ payload:
   - '+.178800.cc'
   - '+.178871.xyz'
   - '+.17888.com'
-  - '+.178bird.com'
   - '+.178bit.com'
   - '+.178du.com'
   - '+.178hui.com'
@@ -1769,6 +1766,7 @@ payload:
   - '+.1mxian.com'
   - '+.1n11.com'
   - '+.1nami.com'
+  - '+.1nmob.com'
   - '+.1nongjing.com'
   - '+.1nsou.com'
   - '+.1nyz.com'
@@ -2671,7 +2669,6 @@ payload:
   - '+.360anyu.com'
   - '+.360bifen.net'
   - '+.360biji.com'
-  - '+.360bike.net'
   - '+.360buy.com'
   - '+.360buyimg.com'
   - '+.360byd.com'
@@ -3456,7 +3453,6 @@ payload:
   - '+.50215.com'
   - '+.503118.com'
   - '+.50331.net'
-  - '+.503683.com'
   - '+.503error.com'
   - '+.504pk.com'
   - '+.5054399.com'
@@ -4085,7 +4081,6 @@ payload:
   - '+.52091w.com'
   - '+.520990.com'
   - '+.520apk.com'
-  - '+.520cai.net'
   - '+.520cc.com'
   - '+.520cfc.com'
   - '+.520chs.com'
@@ -4221,6 +4216,7 @@ payload:
   - '+.52itstyle.vip'
   - '+.52jbj.com'
   - '+.52jdyy.com'
+  - '+.52jianpan.com'
   - '+.52jiaoshi.com'
   - '+.52jingsai.com'
   - '+.52jisu.com'
@@ -7406,7 +7402,6 @@ payload:
   - '+.ah8.cc'
   - '+.ah9yu.com'
   - '+.ahacpp.com'
-  - '+.ahadl.org'
   - '+.ahalei.com'
   - '+.ahanxun.com'
   - '+.ahao.moe'
@@ -8285,7 +8280,6 @@ payload:
   - '+.angelmom.org'
   - '+.angelyeast.com'
   - '+.angelyeast.ru'
-  - '+.angeoakhomeloans.com'
   - '+.angesi16.com'
   - '+.angiefans.com'
   - '+.angli.me'
@@ -9575,7 +9569,6 @@ payload:
   - '+.bang1.work'
   - '+.bangbang.com'
   - '+.bangbang93.com'
-  - '+.bangbangbang.wang'
   - '+.bangboss.com'
   - '+.bangcle.com'
   - '+.bangdao-tech.com'
@@ -11621,7 +11614,6 @@ payload:
   - '+.bumiu.com'
   - '+.bundpic.com'
   - '+.bunfly.com'
-  - '+.bungalow54.com'
   - '+.bungba.com'
   - '+.bunze.com'
   - '+.buread.com'
@@ -12671,6 +12663,7 @@ payload:
   - '+.cdndu.com'
   - '+.cdnet110.com'
   - '+.cdnetdns.net'
+  - '+.cdnetworks.com'
   - '+.cdnff.com'
   - '+.cdngogo2.cc'
   - '+.cdngslb.com'
@@ -15258,7 +15251,6 @@ payload:
   - '+.cnkang.com'
   - '+.cnkefa.com'
   - '+.cnkeyboard.com'
-  - '+.cnkeyboard.net'
   - '+.cnki.net'
   - '+.cnki.vip'
   - '+.cnkicheck.info'
@@ -15779,6 +15771,7 @@ payload:
   - '+.cooldu.com'
   - '+.cooleasy.net'
   - '+.coolecho.net'
+  - '+.coolecloud.com'
   - '+.coolexe.com'
   - '+.coolfd.com'
   - '+.coolgamebox.com'
@@ -21550,6 +21543,7 @@ payload:
   - '+.fineui.com'
   - '+.fineway.com'
   - '+.finewyx.com'
+  - '+.fineyoga.com'
   - '+.finger66.com'
   - '+.fingerstylechina.com'
   - '+.fingertc.com'
@@ -22223,6 +22217,7 @@ payload:
   - '+.futu5.com'
   - '+.futufin.com'
   - '+.futuhk.com'
+  - '+.futuhn.com'
   - '+.futuku.com'
   - '+.futuniuniu.com'
   - '+.futunn.com'
@@ -24432,6 +24427,7 @@ payload:
   - '+.gzhhr.com'
   - '+.gzhifi.com'
   - '+.gzhkl.com'
+  - '+.gzhotelgroup.com'
   - '+.gzhphb.com'
   - '+.gzhshoulu.wang'
   - '+.gzhtinfo.com'
@@ -25326,7 +25322,6 @@ payload:
   - '+.hbeducloud.com'
   - '+.hbekt.com'
   - '+.hbepec.com'
-  - '+.hbezzx.com'
   - '+.hbfie.org'
   - '+.hbfire.com'
   - '+.hbfootball.com'
@@ -29701,7 +29696,6 @@ payload:
   - '+.ishenping.com'
   - '+.ishenyou.com'
   - '+.ishhuo.com'
-  - '+.ishici.com'
   - '+.ishipoffshore.com'
   - '+.ishoujizhuan.com'
   - '+.ishowchina.com'
@@ -29963,6 +29957,7 @@ payload:
   - '+.itushuo.com'
   - '+.itutu.tv'
   - '+.ituu.net'
+  - '+.itvssp.com'
   - '+.itwanger.com'
   - '+.itwlw.com'
   - '+.itwork.club'
@@ -30851,6 +30846,7 @@ payload:
   - '+.jiayongluyou.com'
   - '+.jiayouhaoche.com'
   - '+.jiayouxueba.com'
+  - '+.jiayu.yoga'
   - '+.jiayu0x.com'
   - '+.jiayuan-law.com'
   - '+.jiayuan.com'
@@ -31162,7 +31158,6 @@ payload:
   - '+.jinhuatv.com'
   - '+.jinhuazhe.com'
   - '+.jinhusns.com'
-  - '+.jinhutz.com'
   - '+.jinianbi.com'
   - '+.jiniance8.com'
   - '+.jiningyuesao.com'
@@ -31451,6 +31446,7 @@ payload:
   - '+.jizhangzhuce.com'
   - '+.jizhiba.com'
   - '+.jizhidsp.com'
+  - '+.jizhimobi.com'
   - '+.jizhiyingxiao.net'
   - '+.jizhiyouke.com'
   - '+.jizhuba.com'
@@ -31758,7 +31754,6 @@ payload:
   - '+.joojcc.com'
   - '+.joojtech.com'
   - '+.joojzz.com'
-  - '+.joomob.com'
   - '+.joooz.com'
   - '+.joouoo.com'
   - '+.joowhee.com'
@@ -36533,7 +36528,6 @@ payload:
   - '+.lygdfrcb.com'
   - '+.lygfdc.com'
   - '+.lyghi.com'
-  - '+.lyglgg.com'
   - '+.lygmedia.com'
   - '+.lygnews.com'
   - '+.lygou.cc'
@@ -36705,6 +36699,7 @@ payload:
   - '+.maczd.com'
   - '+.maczhi.com'
   - '+.maczj.com'
+  - '+.mad-infeed.jp'
   - '+.madaicaifu.com'
   - '+.madailicai.com'
   - '+.made-in-china.com'
@@ -36797,7 +36792,6 @@ payload:
   - '+.mainlandip.com'
   - '+.mainone.com'
   - '+.maintao.com'
-  - '+.mainvyou.com'
   - '+.mainwww.com'
   - '+.maipu.com'
   - '+.maiqixiong.com'
@@ -37694,6 +37688,7 @@ payload:
   - '+.mhzd.net'
   - '+.mi-ae.net'
   - '+.mi-dun.com'
+  - '+.mi-fds.com'
   - '+.mi-fds.net'
   - '+.mi-idc.com'
   - '+.mi-img.com'
@@ -39225,7 +39220,6 @@ payload:
   - '+.n3762.com'
   - '+.n3875.com'
   - '+.n3sd.com'
-  - '+.n4115.com'
   - '+.n423.com'
   - '+.n459.com'
   - '+.n4x8.xyz'
@@ -42772,7 +42766,6 @@ payload:
   - '+.qfang.com'
   - '+.qfangimg.com'
   - '+.qfcm.vip'
-  - '+.qfdy2022.xyz'
   - '+.qfedu.com'
   - '+.qfeiche.com'
   - '+.qfgolang.com'
@@ -44021,7 +44014,6 @@ payload:
   - '+.quwan.fun'
   - '+.quwangming.com'
   - '+.quweikm.com'
-  - '+.quweiting.com'
   - '+.quweiwu.com'
   - '+.quwenqing.com'
   - '+.quwenqushi.com'
@@ -48318,6 +48310,7 @@ payload:
   - '+.sqdaily.com'
   - '+.sqeatin.com'
   - '+.sqfcw.com'
+  - '+.sqfgc.com'
   - '+.sqfortune.com'
   - '+.sqggzy.com'
   - '+.sqkb.com'
@@ -48771,7 +48764,6 @@ payload:
   - '+.sunborngame.com'
   - '+.sunboxsoft.com'
   - '+.sunboyu.com'
-  - '+.suncafe.cc'
   - '+.suncco.com'
   - '+.sundan.com'
   - '+.sundayrx.net'
@@ -52213,6 +52205,7 @@ payload:
   - '+.ugsnx.com'
   - '+.ugubl.net'
   - '+.ugxsd.com'
+  - '+.uhabo.com'
   - '+.uhandak.com'
   - '+.uhomecp.com'
   - '+.uhomes.com'
@@ -52269,7 +52262,6 @@ payload:
   - '+.ukelink.com'
   - '+.uker.net'
   - '+.ukh5.com'
-  - '+.ukolmv.com'
   - '+.ukongm.com'
   - '+.ukonline2000.com'
   - '+.ukoo.net'
@@ -52292,7 +52284,6 @@ payload:
   - '+.ulink.cc'
   - '+.ulkoxbra.com'
   - '+.ulpay.com'
-  - '+.ultramanclub.com'
   - '+.ultramanol.com'
   - '+.ulucu.com'
   - '+.ulzdk.com'
@@ -52988,7 +52979,6 @@ payload:
   - '+.videozhishi.com'
   - '+.vieldeold.xyz'
   - '+.vienblog.com'
-  - '+.viettelperu.com'
   - '+.viewones.com'
   - '+.viewstock.com'
   - '+.viewtool.com'
@@ -53246,7 +53236,6 @@ payload:
   - '+.vpalstatic.com'
   - '+.vpansou.com'
   - '+.vpbus.com'
-  - '+.vpcoupons.com'
   - '+.vpcs.com'
   - '+.vpgame.com'
   - '+.vpiaotong.com'
@@ -56167,6 +56156,7 @@ payload:
   - '+.xachangda.com'
   - '+.xacitywall.com'
   - '+.xacnnic.com'
+  - '+.xactad.net'
   - '+.xadamai.com'
   - '+.xadiannao.com'
   - '+.xadlwx.com'
@@ -56179,6 +56169,7 @@ payload:
   - '+.xagxp.com'
   - '+.xagxz.com'
   - '+.xahb.com'
+  - '+.xahc971.com'
   - '+.xahhp.com'
   - '+.xahuapu.net'
   - '+.xaidc.com'
@@ -56452,7 +56443,6 @@ payload:
   - '+.xf120.com'
   - '+.xf1233.com'
   - '+.xf1433.com'
-  - '+.xf24ms.com'
   - '+.xf3z.com'
   - '+.xf4hs.com'
   - '+.xf5z.com'
@@ -56769,7 +56759,6 @@ payload:
   - '+.xiaodongxier.com'
   - '+.xiaodoubi.com'
   - '+.xiaodoushebao.com'
-  - '+.xiaodouzhuan.net'
   - '+.xiaodouzuche.com'
   - '+.xiaoduoai.com'
   - '+.xiaoduseo.com'
@@ -58315,7 +58304,6 @@ payload:
   - '+.xunlonghe.net'
   - '+.xunlongsoft.com'
   - '+.xunlugame.com'
-  - '+.xunmb.com'
   - '+.xunmei.net'
   - '+.xunmeinet.com'
   - '+.xunmiweb.com'
@@ -58601,7 +58589,6 @@ payload:
   - '+.xzcdc.com'
   - '+.xzddx.com'
   - '+.xzfile.com'
-  - '+.xzforu.com'
   - '+.xzggjyzpw.com'
   - '+.xzgjj.com'
   - '+.xzhengyida.com'
@@ -59695,7 +59682,6 @@ payload:
   - '+.yishu168.com'
   - '+.yishujie.com'
   - '+.yishuliuxue.com'
-  - '+.yishun.net'
   - '+.yishunft.com'
   - '+.yishuzhifa.com'
   - '+.yishuzi.com'
@@ -59936,6 +59922,7 @@ payload:
   - '+.ylzms.com'
   - '+.ylzpay.com'
   - '+.ym-trans.com'
+  - '+.ym01.tech'
   - '+.ym1998.com'
   - '+.ym23.com'
   - '+.ym68.cc'
@@ -60097,6 +60084,7 @@ payload:
   - '+.yoloboo.com'
   - '+.yoloho.com'
   - '+.yoloogames.com'
+  - '+.yolyon.com'
   - '+.yomiko.cloud'
   - '+.yomiko.club'
   - '+.yomiko.fun'
@@ -60737,6 +60725,7 @@ payload:
   - '+.yuanshanbx.com'
   - '+.yuanshen.com'
   - '+.yuanshichang.com'
+  - '+.yuansikeji2021.com'
   - '+.yuansouti.com'
   - '+.yuantengfei.org'
   - '+.yuantiku.com'
@@ -62793,7 +62782,6 @@ payload:
   - '+.zhuanfa.net'
   - '+.zhuanfou.com'
   - '+.zhuang520.com'
-  - '+.zhuang666.com'
   - '+.zhuang99.com'
   - '+.zhuangji.net'
   - '+.zhuangjiba.com'
