--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2134,7 +2134,6 @@ payload:
   - '+.23xsw.cc'
   - '+.23yy.com'
   - '+.240yx.com'
-  - '+.243ty.com'
   - '+.2441105.cc'
   - '+.246546.com'
   - '+.2478.com'
@@ -2323,7 +2322,6 @@ payload:
   - '+.2gdt.com'
   - '+.2gei.com'
   - '+.2google.com'
-  - '+.2hanju.com'
   - '+.2hanjutv.com'
   - '+.2haohr.com'
   - '+.2heng.xin'
@@ -5446,7 +5444,6 @@ payload:
   - '+.77275.cc'
   - '+.7729.com'
   - '+.77313.com'
-  - '+.77348k.com'
   - '+.7735.net'
   - '+.77495.com'
   - '+.77521.com'
@@ -9478,6 +9475,7 @@ payload:
   - '+.baisiweiting.com'
   - '+.baisu.com'
   - '+.baitaihuge.com'
+  - '+.baitdu.com'
   - '+.baiteng.org'
   - '+.baithu.com'
   - '+.baitianinfo.com'
@@ -10417,7 +10415,6 @@ payload:
   - '+.bigc.at'
   - '+.bigcat.com'
   - '+.bigcloud.click'
-  - '+.bigcloud.cyou'
   - '+.bigda.com'
   - '+.bigdata-expo.org'
   - '+.bigdata.ren'
@@ -14917,7 +14914,6 @@ payload:
   - '+.cmsforo.com'
   - '+.cmsjournal.net'
   - '+.cmskcrm.com'
-  - '+.cmsn.biz'
   - '+.cmstop.com'
   - '+.cmt7.com'
   - '+.cmtdi.com'
@@ -17660,7 +17656,6 @@ payload:
   - '+.dfmc.com'
   - '+.dfmcastrol.com'
   - '+.dfmingya.com'
-  - '+.dfn6666.com'
   - '+.dfpk.com'
   - '+.dfpz.net'
   - '+.dfrcb.com'
@@ -21085,7 +21080,6 @@ payload:
   - '+.fatiao.pro'
   - '+.fatjiong.com'
   - '+.fatkun.com'
-  - '+.fatsoon.com'
   - '+.fatvg.com'
   - '+.favdeb.com'
   - '+.favolist.com'
@@ -22236,7 +22230,6 @@ payload:
   - '+.fuwuqu.com'
   - '+.fuxiafood.com'
   - '+.fuxinbank.com'
-  - '+.fuxing56.com'
   - '+.fuxingtech.com'
   - '+.fuxingwang.com'
   - '+.fuxunpay.com'
@@ -24653,7 +24646,6 @@ payload:
   - '+.hadax.com'
   - '+.hadobi.com'
   - '+.hadsky.com'
-  - '+.hadyang.com'
   - '+.haers.com'
   - '+.haguan.com'
   - '+.haguworld.com'
@@ -24859,6 +24851,7 @@ payload:
   - '+.handfunds.com'
   - '+.handian027.com'
   - '+.handone.com'
+  - '+.handpk.com'
   - '+.handu.com'
   - '+.handuyishe.com'
   - '+.handyfriendship.com'
@@ -28652,7 +28645,6 @@ payload:
   - '+.ieayoio.com'
   - '+.iecdn.com'
   - '+.iecidc.com'
-  - '+.iecie.com'
   - '+.iecity.com'
   - '+.iecnews.com'
   - '+.iecnu.com'
@@ -29893,7 +29885,6 @@ payload:
   - '+.itmastergame.com'
   - '+.itmind.net'
   - '+.itmoocs.com'
-  - '+.itmop.com'
   - '+.itmresources.com'
   - '+.itmsm.com'
   - '+.itmuch.com'
@@ -30405,6 +30396,7 @@ payload:
   - '+.jdjygold.com'
   - '+.jdkcb.com'
   - '+.jdl.com'
+  - '+.jdlgw.com'
   - '+.jdluosi.com'
   - '+.jdlxzx.com'
   - '+.jdnews.net'
@@ -31033,6 +31025,7 @@ payload:
   - '+.jinchutou.com'
   - '+.jincin.com'
   - '+.jincon.com'
+  - '+.jindaixx.com'
   - '+.jindaodao.com'
   - '+.jindianweb.com'
   - '+.jindidata.com'
@@ -37026,7 +37019,6 @@ payload:
   - '+.mapbar.com'
   - '+.mapeng.net'
   - '+.mapgis.com'
-  - '+.mapgun.com'
   - '+.mapks.com'
   - '+.maple-game.com'
   - '+.maplef.net'
@@ -39672,6 +39664,7 @@ payload:
   - '+.newzhizao.com'
   - '+.nexmoe.com'
   - '+.nexon.to'
+  - '+.nextclass.club'
   - '+.nextday.im'
   - '+.nextjoy.com'
   - '+.nexto2o.com'
@@ -42622,7 +42615,6 @@ payload:
   - '+.qbox.net'
   - '+.qbview.com'
   - '+.qbxz.com'
-  - '+.qc-dds.net'
   - '+.qc-hr.com'
   - '+.qc178.com'
   - '+.qc188.com'
@@ -43946,7 +43938,6 @@ payload:
   - '+.qumaishu.com'
   - '+.qumaiyao.com'
   - '+.qumifeng.com'
-  - '+.quming66.com'
   - '+.qumingdashi.com'
   - '+.qumingxing.com'
   - '+.qumitech.com'
@@ -46676,7 +46667,6 @@ payload:
   - '+.shixinhua.com'
   - '+.shixiseng.com'
   - '+.shixiu.net'
-  - '+.shixiu.org'
   - '+.shixunsuda.com'
   - '+.shixunwl.com'
   - '+.shiyan.com'
@@ -47894,7 +47884,6 @@ payload:
   - '+.sodino.com'
   - '+.sodocloud.com'
   - '+.sodocs.net'
-  - '+.sodu.cc'
   - '+.sody123.com'
   - '+.soeasysdk.com'
   - '+.sofabiao.com'
@@ -49918,9 +49907,6 @@ payload:
   - '+.tburl.in'
   - '+.tburl.net'
   - '+.tbuser.com'
-  - '+.tbw-fuzhuang.com'
-  - '+.tbw-hufu.com'
-  - '+.tbw-xie.com'
   - '+.tbxt.com'
   - '+.tbyfsoft.com'
   - '+.tbyuantu.com'
@@ -51779,7 +51765,6 @@ payload:
   - '+.tv002.com'
   - '+.tv189.com'
   - '+.tv432.com'
-  - '+.tv5box.com'
   - '+.tvandnet.com'
   - '+.tvapk.com'
   - '+.tvapk.net'
@@ -55513,7 +55498,6 @@ payload:
   - '+.wpxap.com'
   - '+.wpyou.com'
   - '+.wpzhiku.com'
-  - '+.wq14.com'
   - '+.wq96f9.com'
   - '+.wqbook.com'
   - '+.wqc.so'
@@ -56029,6 +56013,7 @@ payload:
   - '+.wyh138.com'
   - '+.wyhos.fun'
   - '+.wyins.net'
+  - '+.wyjianzhan.com'
   - '+.wykefu.com'
   - '+.wyktwx.com'
   - '+.wykw.com'
@@ -56388,7 +56373,6 @@ payload:
   - '+.xdnote.com'
   - '+.xdnphb.com'
   - '+.xdocin.com'
-  - '+.xdow.net'
   - '+.xdowns.com'
   - '+.xdplt.com'
   - '+.xdpvp.com'
@@ -56551,7 +56535,6 @@ payload:
   - '+.xhtd291.com'
   - '+.xhungame.com'
   - '+.xhup.club'
-  - '+.xhwhouse.com'
   - '+.xhxsw.com'
   - '+.xhy.com'
   - '+.xhyd.com'
@@ -58490,6 +58473,7 @@ payload:
   - '+.xyfc.com'
   - '+.xyfcw.com'
   - '+.xyffsb.com'
+  - '+.xyffvip.com'
   - '+.xyfw.org'
   - '+.xyg3.com'
   - '+.xygmed.com'
@@ -61625,7 +61609,6 @@ payload:
   - '+.zb8.com'
   - '+.zbbar.net'
   - '+.zbfilm.com'
-  - '+.zbfjsj.com'
   - '+.zbgedu.com'
   - '+.zbgl.net'
   - '+.zbgscm.com'
@@ -62856,7 +62839,6 @@ payload:
   - '+.zhuhaily.com'
   - '+.zhuhd.win'
   - '+.zhuiguang.com'
-  - '+.zhuihanju.com'
   - '+.zhuihuodong.com'
   - '+.zhuimengzhu.com'
   - '+.zhuiqu.com'
@@ -63599,6 +63581,7 @@ payload:
   - '+.zq99y.com'
   - '+.zqbzs.cc'
   - '+.zqcloudgame.com'
+  - '+.zqcyzg.com'
   - '+.zqfxj.com'
   - '+.zqgame.com'
   - '+.zqgreen.com'
