--- a/directbak.yaml
+++ b/directbak.yaml
@@ -800,7 +800,6 @@ payload:
   - '+.10s1.com'
   - '+.10sea.com'
   - '+.10soo.com'
-  - '+.10tiao.com'
   - '+.10uv.net'
   - '+.10vps.com'
   - '+.10yan.com'
@@ -1624,6 +1623,7 @@ payload:
   - '+.18link.com'
   - '+.18ph.com'
   - '+.18qiang.com'
+  - '+.18srcimg.com'
   - '+.18touch.com'
   - '+.18vps.com'
   - '+.18wk.com'
@@ -1841,6 +1841,7 @@ payload:
   - '+.2.gy'
   - '+.200.net'
   - '+.2000200.com'
+  - '+.200022.xyz'
   - '+.2000888.com'
   - '+.2000dns.com'
   - '+.2000new.com'
@@ -6283,7 +6284,6 @@ payload:
   - '+.91mariadb.com'
   - '+.91maths.com'
   - '+.91miaoshou.com'
-  - '+.91mjw.vip'
   - '+.91money.com'
   - '+.91muzhi.com'
   - '+.91ndeh.xyz'
@@ -7390,6 +7390,7 @@ payload:
   - '+.agucn.com'
   - '+.agxs.net'
   - '+.ah-inter.com'
+  - '+.ah-suuwaa.com'
   - '+.ah12333.com'
   - '+.ah163.com'
   - '+.ah3c.com'
@@ -9363,6 +9364,7 @@ payload:
   - '+.baidufe.com'
   - '+.baidufree.com'
   - '+.baiduhui.com'
+  - '+.baiduisjkbvsjkl.com'
   - '+.baidulook.com'
   - '+.baidunongmin.com'
   - '+.baiduor.com'
@@ -9893,6 +9895,7 @@ payload:
   - '+.bcbm66666.com'
   - '+.bcbpm.com'
   - '+.bcbvi.com'
+  - '+.bccastle.com'
   - '+.bccn.net'
   - '+.bccnsoft.com'
   - '+.bccv.com'
@@ -9909,6 +9912,7 @@ payload:
   - '+.bcevod.com'
   - '+.bcitb.com'
   - '+.bclsw.com'
+  - '+.bcluo.com'
   - '+.bcmcdn.com'
   - '+.bcmeng.com'
   - '+.bcpcn.com'
@@ -9948,7 +9952,6 @@ payload:
   - '+.bdclouddns.com'
   - '+.bdf2.com'
   - '+.bdfkb.com'
-  - '+.bdfxa.com'
   - '+.bdfzcd.net'
   - '+.bdfzgz.net'
   - '+.bdgamelive.com'
@@ -10133,7 +10136,6 @@ payload:
   - '+.bemfa.com'
   - '+.bemhome.com'
   - '+.benbenlong.com'
-  - '+.benbenq.com'
   - '+.benber-tech.com'
   - '+.benber.com'
   - '+.benbun.com'
@@ -10294,6 +10296,7 @@ payload:
   - '+.bgl88.com'
   - '+.bgmfans.com'
   - '+.bgmlist.com'
+  - '+.bgrdh.com'
   - '+.bgren.com'
   - '+.bgrimm.com'
   - '+.bgsdk.net'
@@ -11436,6 +11439,7 @@ payload:
   - '+.brire.com'
   - '+.britesemi.com'
   - '+.brlinked.com'
+  - '+.brmyx.com'
   - '+.broad-ocean.com'
   - '+.broadon.net'
   - '+.broadskytech.com'
@@ -11572,6 +11576,7 @@ payload:
   - '+.buddhalikedoge.com'
   - '+.budhano.com'
   - '+.buding.tv'
+  - '+.budingmore.com'
   - '+.budou.com'
   - '+.buduanwang.vip'
   - '+.buduobaobao.com'
@@ -11887,6 +11892,7 @@ payload:
   - '+.c5game.com'
   - '+.c6c.com'
   - '+.c6n708.ren'
+  - '+.c7575tp.com'
   - '+.c75uw72.com'
   - '+.c77c.com'
   - '+.c7c8.com'
@@ -13690,6 +13696,7 @@ payload:
   - '+.chinacpda.org'
   - '+.chinacpec.com'
   - '+.chinacpx.com'
+  - '+.chinacqic.org'
   - '+.chinacqsb.com'
   - '+.chinacrane.net'
   - '+.chinacreator.com'
@@ -14334,7 +14341,6 @@ payload:
   - '+.chuangxinapi.com'
   - '+.chuangxinoa.com'
   - '+.chuangye.com'
-  - '+.chuangye98.com'
   - '+.chuangyebaba.com'
   - '+.chuangyejia.com'
   - '+.chuangyejmw.com'
@@ -15297,7 +15303,6 @@ payload:
   - '+.cnmsn.net'
   - '+.cnmstl.net'
   - '+.cnmtpt.com'
-  - '+.cnmysql.com'
   - '+.cnnaihuo.com'
   - '+.cnnb.com'
   - '+.cnnbfdc.com'
@@ -15612,6 +15617,7 @@ payload:
   - '+.codingsky.com'
   - '+.codingwhy.com'
   - '+.codingyang.com'
+  - '+.codmwest.com'
   - '+.codoon.com'
   - '+.codooncdn.com'
   - '+.codrim.net'
@@ -16024,6 +16030,7 @@ payload:
   - '+.cqqnb.net'
   - '+.cqqp.com'
   - '+.cqqsyy.com'
+  - '+.cqqyn.com'
   - '+.cqrc.net'
   - '+.cqrcb.com'
   - '+.cqrcdsc.com'
@@ -19973,6 +19980,7 @@ payload:
   - '+.eisoo.com'
   - '+.eistudy.com'
   - '+.eit0571.com'
+  - '+.ej22g.com'
   - '+.ejamad.com'
   - '+.ejcms.com'
   - '+.ejcop.com'
@@ -20068,7 +20076,6 @@ payload:
   - '+.elongshine.com'
   - '+.elongstatic.com'
   - '+.elontest.com'
-  - '+.elopatchwork.com'
   - '+.elpcon.com'
   - '+.elpwc.com'
   - '+.els001.com'
@@ -20408,6 +20415,7 @@ payload:
   - '+.esunny.com'
   - '+.eswin.com'
   - '+.eswzx.com'
+  - '+.esycd.com'
   - '+.eszmall.com'
   - '+.esztsg.org'
   - '+.esztyg.com'
@@ -21174,6 +21182,7 @@ payload:
   - '+.fecshop.com'
   - '+.fedte.cc'
   - '+.feeclouds.com'
+  - '+.feedcoopapi.com'
   - '+.feedou.com'
   - '+.feedsky.com'
   - '+.feedss.com'
@@ -21620,7 +21629,6 @@ payload:
   - '+.fjhxbank.com'
   - '+.fjhxcaee.com'
   - '+.fjii.com'
-  - '+.fjithr.com'
   - '+.fjjcjy.com'
   - '+.fjjsp01.com'
   - '+.fjjszg.com'
@@ -23363,6 +23371,7 @@ payload:
   - '+.gmwiki.com'
   - '+.gmwtp.com'
   - '+.gmwuf.com'
+  - '+.gmxmym.ren'
   - '+.gmz88.com'
   - '+.gmzhushou.com'
   - '+.gmzi.com'
@@ -24045,6 +24054,7 @@ payload:
   - '+.guguread.com'
   - '+.guguyu.com'
   - '+.guhai66.com'
+  - '+.guheshuyuan.com'
   - '+.guhuozaiol.com'
   - '+.gui333.com'
   - '+.gui66.com'
@@ -24270,6 +24280,7 @@ payload:
   - '+.gxfdcw.com'
   - '+.gxfeifan123.com'
   - '+.gxfengjie.com'
+  - '+.gxfengxiang.com'
   - '+.gxfin.com'
   - '+.gxfxwh.com'
   - '+.gxganju.com'
@@ -24895,7 +24906,6 @@ payload:
   - '+.hanjutv.me'
   - '+.hanjutvaa.com'
   - '+.hankeer.org'
-  - '+.hankewins.com'
   - '+.hanking.com'
   - '+.hankunlaw.com'
   - '+.hanlefang.net'
@@ -26967,6 +26977,7 @@ payload:
   - '+.hshy.net'
   - '+.hsigus.com'
   - '+.hsiii.com'
+  - '+.hsimg11.com'
   - '+.hsjk.com'
   - '+.hsjkaoyan.com'
   - '+.hslj.net'
@@ -27190,7 +27201,6 @@ payload:
   - '+.huangdc.com'
   - '+.huangea.com'
   - '+.huanggao.net'
-  - '+.huanggaofang.com'
   - '+.huangh.com'
   - '+.huanghaicollege.com'
   - '+.huanghaiting.com'
@@ -28596,7 +28606,6 @@ payload:
   - '+.idolranking.info'
   - '+.idolyx.com'
   - '+.idom.me'
-  - '+.idomb.com'
   - '+.idong.ren'
   - '+.idongde.com'
   - '+.idongniu.com'
@@ -29051,6 +29060,7 @@ payload:
   - '+.im5i.com'
   - '+.imaccn.com'
   - '+.imaegoo.com'
+  - '+.image-mangdiaxyz.com'
   - '+.imageaccelerate.com'
   - '+.imageedu.com'
   - '+.imagefz.com'
@@ -29449,6 +29459,7 @@ payload:
   - '+.inzotek.com'
   - '+.ioa365.com'
   - '+.ioage.com'
+  - '+.ioclab.com'
   - '+.iocrest.com'
   - '+.iodraw.com'
   - '+.ioeyjsb.com'
@@ -29799,6 +29810,7 @@ payload:
   - '+.itao.com'
   - '+.itaoke.org'
   - '+.itaokecms.com'
+  - '+.itaored.com'
   - '+.itaotuo.com'
   - '+.itaoyun.com'
   - '+.itavcn.com'
@@ -30912,6 +30924,7 @@ payload:
   - '+.jiepeng023.com'
   - '+.jieqi.com'
   - '+.jieqinwang.com'
+  - '+.jieshengit.com'
   - '+.jieshimt8.com'
   - '+.jieshu.me'
   - '+.jieshui8.com'
@@ -31202,7 +31215,6 @@ payload:
   - '+.jinsdk.com'
   - '+.jinse.com'
   - '+.jinsebook.com'
-  - '+.jinsedihao.com'
   - '+.jinsehuaqin.com'
   - '+.jinshakemei.com'
   - '+.jinshangdai.cc'
@@ -31891,7 +31903,6 @@ payload:
   - '+.jrzj.com'
   - '+.jrzp.com'
   - '+.js-aerfa.com'
-  - '+.js-ceo.com'
   - '+.js-code.com'
   - '+.js-dys.com'
   - '+.js-weilong.com'
@@ -31926,7 +31937,6 @@ payload:
   - '+.jsdaima.com'
   - '+.jsdcly.com'
   - '+.jsdthx.com'
-  - '+.jsdujuan.com'
   - '+.jseepub.com'
   - '+.jseoptics.com'
   - '+.jser.com'
@@ -32890,7 +32900,6 @@ payload:
   - '+.kdadj.com'
   - '+.kdatacenter.com'
   - '+.kdd.cc'
-  - '+.kdfax.com'
   - '+.kdhlw.com'
   - '+.kdige.com'
   - '+.kdniao.com'
@@ -33058,7 +33067,6 @@ payload:
   - '+.kexue.com'
   - '+.kexue.fm'
   - '+.kexuezixunzzs.com'
-  - '+.keyan.life'
   - '+.keyboardancer.com'
   - '+.keyboardingonline.net'
   - '+.keycom-ip.com'
@@ -33312,6 +33320,7 @@ payload:
   - '+.kl688.com'
   - '+.kl800.com'
   - '+.kl87n.xyz'
+  - '+.kl91ccp.com'
   - '+.klandk.com'
   - '+.klchemicals.com'
   - '+.kldjy.com'
@@ -33805,7 +33814,6 @@ payload:
   - '+.kuke99.com'
   - '+.kukecloud.com'
   - '+.kukseo.com'
-  - '+.kukuchuangxiang1.com'
   - '+.kukud.net'
   - '+.kukulv.com'
   - '+.kukumai.com'
@@ -35601,6 +35609,7 @@ payload:
   - '+.lixingguang.com'
   - '+.lixiphp.com'
   - '+.lixuan360.com'
+  - '+.liyan365.com'
   - '+.liyangbit.com'
   - '+.liyanggroup.com'
   - '+.liyangliang.me'
@@ -36086,6 +36095,7 @@ payload:
   - '+.lqpsj.com'
   - '+.lqqm.com'
   - '+.lqrcb.com'
+  - '+.lqsdcc.com'
   - '+.lqxshop.com'
   - '+.lqyaopin.com'
   - '+.lqzh.me'
@@ -36120,6 +36130,7 @@ payload:
   - '+.lsgsgs.com'
   - '+.lsgw.com'
   - '+.lsgzn.com'
+  - '+.lsh-cat.com'
   - '+.lshou.com'
   - '+.lsij3km.com'
   - '+.lsj.ac'
@@ -37151,7 +37162,6 @@ payload:
   - '+.mayiyx.com'
   - '+.mayizhuanlan.com'
   - '+.mayou18.com'
-  - '+.maysunmedia.com'
   - '+.mayswind.net'
   - '+.maywant.com'
   - '+.maywonenergy.com'
@@ -38708,6 +38718,7 @@ payload:
   - '+.mszxyh.com'
   - '+.mt-bbs.com'
   - '+.mt-wire.com'
+  - '+.mt4v4.com'
   - '+.mt77.com'
   - '+.mt888vip.com'
   - '+.mtasia.net'
@@ -39216,12 +39227,8 @@ payload:
   - '+.n459.com'
   - '+.n4x8.xyz'
   - '+.n5738.com'
-  - '+.n5878.com'
-  - '+.n6579.com'
-  - '+.n7326.com'
   - '+.n77777777.com'
   - '+.n802.com'
-  - '+.n8389.com'
   - '+.n9cn.net'
   - '+.n9z.net'
   - '+.naadou.com'
@@ -39694,6 +39701,7 @@ payload:
   - '+.nfzhouyi.com'
   - '+.ng-alain.com'
   - '+.nga.wiki'
+  - '+.ngaagslb.net'
   - '+.ngabbs.com'
   - '+.ngacn.cc'
   - '+.ngacn.com'
@@ -43896,6 +43904,7 @@ payload:
   - '+.qufaya.com'
   - '+.qufeisoft.com'
   - '+.qufenqi.com'
+  - '+.qufenqian.vip'
   - '+.qugongdi.com'
   - '+.quhaidiao.com'
   - '+.quhua.com'
@@ -44044,6 +44053,7 @@ payload:
   - '+.qwolf.com'
   - '+.qwomcrm.com'
   - '+.qwpo2018.com'
+  - '+.qwq.kim'
   - '+.qwq.moe'
   - '+.qwq.ren'
   - '+.qwqk.net'
@@ -44162,7 +44172,6 @@ payload:
   - '+.qzxkeji.com'
   - '+.qzxx.com'
   - '+.qzyb.com'
-  - '+.qzybl.com'
   - '+.qzyxzs.com'
   - '+.qzze.com'
   - '+.qzzn.com'
@@ -44738,7 +44747,6 @@ payload:
   - '+.rockerfm.com'
   - '+.rockflow.tech'
   - '+.rockjitui.com'
-  - '+.rockmanlab.net'
   - '+.rockru.com'
   - '+.rockx.pub'
   - '+.rocky.hk'
@@ -45952,6 +45960,7 @@ payload:
   - '+.sfccn.com'
   - '+.sfcdn.org'
   - '+.sfddj.com'
+  - '+.sfdkj.com'
   - '+.sfefqwq3.com'
   - '+.sfgj.org'
   - '+.sfgy.org'
@@ -46676,6 +46685,7 @@ payload:
   - '+.shiyanhospital.com'
   - '+.shiyanjia.com'
   - '+.shiyanlou.com'
+  - '+.shiyculture.com'
   - '+.shiye.org'
   - '+.shiyebian.net'
   - '+.shiyebian.org'
@@ -47055,6 +47065,7 @@ payload:
   - '+.shuowan.net'
   - '+.shupaiyun.com'
   - '+.shuqi.com'
+  - '+.shuqiaozt.com'
   - '+.shuqiapi.com'
   - '+.shuqiread.com'
   - '+.shuqireader.com'
@@ -48129,7 +48140,6 @@ payload:
   - '+.soupv.com'
   - '+.souqian.com'
   - '+.souqiu8.com'
-  - '+.souqiwang.net'
   - '+.souqupu.com'
   - '+.source.tutorabc.com'
   - '+.source3g.com'
@@ -48485,12 +48495,10 @@ payload:
   - '+.staticssl.image-gmkt.com'
   - '+.staycu.com'
   - '+.stbieshu.com'
-  - '+.stbpzs.com'
   - '+.stc2002.com'
   - '+.stcmcu.com'
   - '+.stcmcudata.com'
   - '+.stcn.com'
-  - '+.stcv66.com'
   - '+.stdaily.com'
   - '+.stdard.com'
   - '+.stdicloud.com'
@@ -49552,6 +49560,7 @@ payload:
   - '+.taguxdesign.com'
   - '+.tahua.net'
   - '+.tai-liang.com'
+  - '+.tai1000.com'
   - '+.tai3399.com'
   - '+.tai666666.com'
   - '+.tai87.com'
@@ -49959,6 +49968,7 @@ payload:
   - '+.tctong.com'
   - '+.tcxw.cc'
   - '+.tcy365.com'
+  - '+.tcyad.com'
   - '+.tcylgslb.com'
   - '+.td-tech.com'
   - '+.td22.com'
@@ -50036,7 +50046,6 @@ payload:
   - '+.techqianmo.com'
   - '+.techshidai.com'
   - '+.techsir.com'
-  - '+.techspecndt.com'
   - '+.techtmt.com'
   - '+.techuangyi.com'
   - '+.techug.com'
@@ -50472,10 +50481,8 @@ payload:
   - '+.tiantonglaw.com'
   - '+.tianvalue.com'
   - '+.tianwenhu.com'
-  - '+.tianxia.la'
   - '+.tianxiajiameng.com'
   - '+.tianxiang.com'
-  - '+.tianxianle.com'
   - '+.tianxianmao.com'
   - '+.tianxiawangxiao.com'
   - '+.tianxiaxiao.net'
@@ -50663,7 +50670,6 @@ payload:
   - '+.tipdm.com'
   - '+.tipray.com'
   - '+.tiprpress.com'
-  - '+.tips1000.com'
   - '+.tipsanakcerdas.com'
   - '+.tiqiaa.com'
   - '+.tiqianle.com'
@@ -52341,6 +52347,7 @@ payload:
   - '+.unifycarbon.com'
   - '+.unigress.com'
   - '+.uninf.com'
+  - '+.uninstall-tools.com'
   - '+.union-4.com'
   - '+.union-game.com'
   - '+.union-rnd.com'
@@ -52399,6 +52406,7 @@ payload:
   - '+.unsuv.com'
   - '+.unyoo.com'
   - '+.unzg.com'
+  - '+.uochen.com'
   - '+.uodoo.com'
   - '+.uoeee.com'
   - '+.uofon.com'
@@ -53039,6 +53047,7 @@ payload:
   - '+.vipliangmei.com'
   - '+.viplux.com'
   - '+.vipmaillist.com'
+  - '+.vipmalljf.com'
   - '+.vipmro.com'
   - '+.vipmro.net'
   - '+.viponlyedu.com'
@@ -53262,6 +53271,7 @@ payload:
   - '+.vr-game.club'
   - '+.vr186.com'
   - '+.vr42.com'
+  - '+.vralzuns.com'
   - '+.vrbeing.com'
   - '+.vrbi.viveport.com'
   - '+.vrbig.com'
@@ -53323,7 +53333,6 @@ payload:
   - '+.vtuzx.com'
   - '+.vue-js.com'
   - '+.vue5.com'
-  - '+.vuejscaff.com'
   - '+.vuepr.icu'
   - '+.vuevideo.net'
   - '+.vuhbgtsi.xyz'
@@ -56283,6 +56292,7 @@ payload:
   - '+.xcdn.global'
   - '+.xcexe.com'
   - '+.xcfunds.com'
+  - '+.xcggzzb.com'
   - '+.xcgogo.club'
   - '+.xcgogo.site'
   - '+.xcgp.com'
@@ -57294,7 +57304,6 @@ payload:
   - '+.xinhaoqi.net'
   - '+.xinhay.com'
   - '+.xinhongru.com'
-  - '+.xinhtz.com'
   - '+.xinhua-news.com'
   - '+.xinhua.org'
   - '+.xinhua08.com'
@@ -58210,7 +58219,6 @@ payload:
   - '+.xuexi365.com'
   - '+.xuexi637.com'
   - '+.xuexiaodaquan.com'
-  - '+.xuexiaodaquan.net'
   - '+.xuexiaozhaopin.com'
   - '+.xuexibao.com'
   - '+.xuexigang.com'
@@ -59244,7 +59252,6 @@ payload:
   - '+.yi-you.org'
   - '+.yi-yun-tong.com'
   - '+.yi114.com'
-  - '+.yi588.com'
   - '+.yi6.com'
   - '+.yi7.com'
   - '+.yiaini.com'
@@ -60339,7 +60346,6 @@ payload:
   - '+.youwusc.com'
   - '+.youxi.com'
   - '+.youxi01.com'
-  - '+.youxi369.com'
   - '+.youxi377.com'
   - '+.youxi528.com'
   - '+.youxi567.com'
@@ -62720,7 +62726,6 @@ payload:
   - '+.zhongzq.com'
   - '+.zhopera.com'
   - '+.zhouao.com'
-  - '+.zhoubochina.com'
   - '+.zhouchun.net'
   - '+.zhoudaosh.com'
   - '+.zhougong.com'
@@ -63279,7 +63284,6 @@ payload:
   - '+.zjxc.com'
   - '+.zjxf119.com'
   - '+.zjxhgd.com'
-  - '+.zjxin007.com'
   - '+.zjxpp.com'
   - '+.zjxqyy.com'
   - '+.zjxsbank.com'
@@ -63711,6 +63715,7 @@ payload:
   - '+.ztfssc.com'
   - '+.ztgame.com'
   - '+.ztgy.org'
+  - '+.zthsqx.com'
   - '+.zthxcf.com'
   - '+.ztinfoga.com'
   - '+.ztjoin.com'
