--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2004,7 +2004,6 @@ payload:
   - '+.21zbs.com'
   - '+.21znw.com'
   - '+.22.com'
-  - '+.220book.com'
   - '+.221234.xyz'
   - '+.2213.com'
   - '+.221316.com'
@@ -2696,6 +2695,7 @@ payload:
   - '+.360down.com'
   - '+.360drift.com'
   - '+.360drm.com'
+  - '+.360dunjiasu.com'
   - '+.360eol.com'
   - '+.360fdc.com'
   - '+.360gann.com'
@@ -4162,6 +4162,7 @@ payload:
   - '+.52bji.com'
   - '+.52bjy.com'
   - '+.52bqg.com'
+  - '+.52bsj.vip'
   - '+.52bss.com'
   - '+.52bus.com'
   - '+.52by.com'
@@ -4181,6 +4182,7 @@ payload:
   - '+.52dr.net'
   - '+.52dsy.com'
   - '+.52dtv.com'
+  - '+.52dus.cc'
   - '+.52dyy.com'
   - '+.52dzc.com'
   - '+.52dzxy.com'
@@ -4474,6 +4476,7 @@ payload:
   - '+.5648.cc'
   - '+.56506666.com'
   - '+.5654.com'
+  - '+.56559971.com'
   - '+.566.com'
   - '+.5669.com'
   - '+.566job.com'
@@ -5625,6 +5628,7 @@ payload:
   - '+.7sdn.com'
   - '+.7sheji.com'
   - '+.7sj.com'
+  - '+.7sown.com'
   - '+.7su.com'
   - '+.7t9.com'
   - '+.7tapp.com'
@@ -5734,6 +5738,7 @@ payload:
   - '+.80zhan.com'
   - '+.8104510.com'
   - '+.810840.com'
+  - '+.810book.com'
   - '+.812361.com'
   - '+.81265.net'
   - '+.81312.com'
@@ -6043,7 +6048,6 @@ payload:
   - '+.8bb.com'
   - '+.8bcd9.com'
   - '+.8bears.com'
-  - '+.8bei8.com'
   - '+.8bit.xin'
   - '+.8btc-ops.com'
   - '+.8btc.com'
@@ -7274,6 +7278,7 @@ payload:
   - '+.adssaas.com'
   - '+.adssap.com'
   - '+.adsspr.com'
+  - '+.adstarcharm.com'
   - '+.adsunflower.com'
   - '+.adt100.com'
   - '+.adtaipo.com'
@@ -7731,6 +7736,7 @@ payload:
   - '+.aishangba.org'
   - '+.aishangyangyu.com'
   - '+.aishengji.com'
+  - '+.aishu5.com'
   - '+.aishuge.la'
   - '+.aisila.com'
   - '+.aisino.com'
@@ -9026,7 +9032,6 @@ payload:
   - '+.aupu.net'
   - '+.aura-el.com'
   - '+.aurogon.com'
-  - '+.auroivf.com'
   - '+.auromcs.com'
   - '+.ausaview.com'
   - '+.ausbio.com'
@@ -11297,6 +11302,7 @@ payload:
   - '+.boohee.com'
   - '+.book118.com'
   - '+.book1234.com'
+  - '+.bookabc.cc'
   - '+.bookask.com'
   - '+.bookdao.com'
   - '+.bookdown.net'
@@ -12041,7 +12047,6 @@ payload:
   - '+.cairot.com'
   - '+.caisan.io'
   - '+.caishen66.com'
-  - '+.caishencai.com'
   - '+.caishenpo.com'
   - '+.caishenwang.online'
   - '+.caistv.com'
@@ -12138,7 +12143,6 @@ payload:
   - '+.canrike.com'
   - '+.cansee.net'
   - '+.cansine.com'
-  - '+.cansuan.com'
   - '+.cantoge.com'
   - '+.canway.net'
   - '+.canwayit.com'
@@ -12237,7 +12241,6 @@ payload:
   - '+.casic3s.com'
   - '+.casicloud.com'
   - '+.casicyber.com'
-  - '+.casinorb.com'
   - '+.caslease.com'
   - '+.casnb.com'
   - '+.casql.com'
@@ -13162,6 +13165,7 @@ payload:
   - '+.chaojixiaobaicai.club'
   - '+.chaojiying.com'
   - '+.chaojiyun.com'
+  - '+.chaokaixin.net'
   - '+.chaolady.com'
   - '+.chaolean.com'
   - '+.chaolen.com'
@@ -16117,6 +16121,7 @@ payload:
   - '+.creatby.com'
   - '+.createcdigital.com'
   - '+.creati5.com'
+  - '+.creationventure.com'
   - '+.crec4.com'
   - '+.crec4mc.com'
   - '+.crecg.com'
@@ -17460,7 +17465,6 @@ payload:
   - '+.decorcn.com'
   - '+.decwhy.com'
   - '+.dede168.com'
-  - '+.dedeapps.com'
   - '+.dedecms.com'
   - '+.dedecmsplus.com'
   - '+.dededao.com'
@@ -17644,7 +17648,6 @@ payload:
   - '+.df81.com'
   - '+.df9377.com'
   - '+.df962388.com'
-  - '+.dfangmami.com'
   - '+.dfcfs.com'
   - '+.dfcfw.com'
   - '+.dfcx-bj.com'
@@ -17702,7 +17705,6 @@ payload:
   - '+.dg121.com'
   - '+.dgchangan.com'
   - '+.dgddh.xyz'
-  - '+.dgdxs.com'
   - '+.dgegbj.com'
   - '+.dgg.net'
   - '+.dggdf.com'
@@ -19899,7 +19901,6 @@ payload:
   - '+.efuncn.com'
   - '+.efunent.com'
   - '+.efunq.com'
-  - '+.efwang.com'
   - '+.efwh.com'
   - '+.efy-tech.com'
   - '+.efyzhcwk.cfd'
@@ -19989,6 +19990,7 @@ payload:
   - '+.ejcms.com'
   - '+.ejcop.com'
   - '+.ejdyin.com'
+  - '+.ejectu.com'
   - '+.ejee.com'
   - '+.ejeegroup.com'
   - '+.ejfeng.com'
@@ -23039,7 +23041,6 @@ payload:
   - '+.gexing.me'
   - '+.gexings.com'
   - '+.gexingzipai.com'
-  - '+.geyan123.com'
   - '+.geyo.com'
   - '+.geyoukj.com'
   - '+.gezhixq.net'
@@ -23405,7 +23406,6 @@ payload:
   - '+.go2yd.com'
   - '+.go300.com'
   - '+.go5.cc'
-  - '+.goalan.net'
   - '+.goalhi.com'
   - '+.goalmobi.com'
   - '+.goapk.com'
@@ -23685,6 +23685,7 @@ payload:
   - '+.gowan8.com'
   - '+.goweb2.net'
   - '+.goweb3.net'
+  - '+.goweike.net'
   - '+.gowincms.com'
   - '+.gowinlease.com'
   - '+.gowinxp.com'
@@ -24556,7 +24557,6 @@ payload:
   - '+.gzzoo.com'
   - '+.gzzqy.net'
   - '+.gzzswy.com'
-  - '+.gzzsxxw.com'
   - '+.gzzy04.com'
   - '+.gzzy05.com'
   - '+.h-college.com'
@@ -26314,6 +26314,7 @@ payload:
   - '+.hlapi.com'
   - '+.hlbeixiu.com'
   - '+.hlbeixiu.net'
+  - '+.hlcdn.cc'
   - '+.hldbtv.com'
   - '+.hldgp.com'
   - '+.hldnews.com'
@@ -27244,6 +27245,7 @@ payload:
   - '+.huanpingge.com'
   - '+.huanqiu.com'
   - '+.huanqiuauto.com'
+  - '+.huanqiuchuguo.com'
   - '+.huanqiukexue.com'
   - '+.huanqiumil.com'
   - '+.huanqiuw.com'
@@ -27961,6 +27963,7 @@ payload:
   - '+.hypefolio.com'
   - '+.hypefolio.net'
   - '+.hyper.sh'
+  - '+.hypercachenet.com'
   - '+.hypergryph.com'
   - '+.hypersilicon.com'
   - '+.hyrainbow.com'
@@ -29475,7 +29478,6 @@ payload:
   - '+.iosinit.com'
   - '+.iosmu.com'
   - '+.iosre.com'
-  - '+.ioswift.org'
   - '+.iot-online.com'
   - '+.iot.moe'
   - '+.iot1001.com'
@@ -29524,6 +29526,7 @@ payload:
   - '+.ipchaxun.net'
   - '+.ipcmen.com'
   - '+.ipcorecatalog.com'
+  - '+.ipctest.com'
   - '+.ipcwifi.com'
   - '+.ipcxz.com'
   - '+.ipdaili.com'
@@ -29900,7 +29903,6 @@ payload:
   - '+.itnihao.com'
   - '+.itniwota.com'
   - '+.itnpc.com'
-  - '+.itnpyfwshe.com'
   - '+.itnxs.com'
   - '+.itocp.com'
   - '+.itoec.org'
@@ -30703,7 +30705,6 @@ payload:
   - '+.jianhen.net'
   - '+.jianhui.org'
   - '+.jianianle.com'
-  - '+.jianick.com'
   - '+.jianjian.tv'
   - '+.jianjiaobuluo.com'
   - '+.jianjie8.com'
@@ -33322,7 +33323,6 @@ payload:
   - '+.kljiyou.com'
   - '+.kllife.com'
   - '+.klmh5.com'
-  - '+.klmhw.com'
   - '+.klmnf.com'
   - '+.klmy118114.com'
   - '+.klmybbs.com'
@@ -34055,7 +34055,6 @@ payload:
   - '+.labiciprimaditutto.com'
   - '+.labno3.com'
   - '+.laborlawtime.com'
-  - '+.labtoday.net'
   - '+.labview.help'
   - '+.labxing.com'
   - '+.lacesar.com'
@@ -34252,7 +34251,6 @@ payload:
   - '+.lanshanweb.com'
   - '+.lanshenniao.com'
   - '+.lanshizi.com'
-  - '+.lantaoyu.com'
   - '+.lantian-hotel.com'
   - '+.lantian.tv'
   - '+.lanting123.com'
@@ -34478,6 +34476,7 @@ payload:
   - '+.lcsrw.com'
   - '+.lcux.net'
   - '+.lcxwfc.com'
+  - '+.lcyff.com'
   - '+.lcyp.net'
   - '+.lczm.com'
   - '+.lczyy.com'
@@ -35493,6 +35492,7 @@ payload:
   - '+.liujunworld.com'
   - '+.liujy.com'
   - '+.liukebao.com'
+  - '+.liulan.net'
   - '+.liulan7.net'
   - '+.liulanmi.com'
   - '+.liulanqi.com'
@@ -36392,6 +36392,7 @@ payload:
   - '+.lvrui.io'
   - '+.lvsanxia.com'
   - '+.lvse.com'
+  - '+.lvseyouxue.com'
   - '+.lvshedesign.com'
   - '+.lvshi567.com'
   - '+.lvshidaxia.com'
@@ -39466,7 +39467,6 @@ payload:
   - '+.negroupedu.org'
   - '+.neigou.com'
   - '+.neihanshequ.com'
-  - '+.neihhou.com'
   - '+.neisha.cc'
   - '+.neitui.com'
   - '+.neituixiaowangzi.com'
@@ -39713,7 +39713,6 @@ payload:
   - '+.ngxfence.org'
   - '+.nh.com'
   - '+.nhaidu.net'
-  - '+.nhbhpx.club'
   - '+.nhdmd.com'
   - '+.nhganggeban.com'
   - '+.nhhwhxh.com'
@@ -39764,7 +39763,6 @@ payload:
   - '+.nicolaszhao.com'
   - '+.niconiconi.cc'
   - '+.nicotine.vip'
-  - '+.nicotv.me'
   - '+.nie.io'
   - '+.nielsenccdata.tv'
   - '+.nies.org'
@@ -40008,7 +40006,6 @@ payload:
   - '+.nnwb.com'
   - '+.nnynrc.com'
   - '+.nnzsxblaw.com'
-  - '+.no1cg.com'
   - '+.noahedu.com'
   - '+.noahsnail.com'
   - '+.noahteck.com'
@@ -41861,6 +41858,7 @@ payload:
   - '+.pinpaime.com'
   - '+.pinpaing.com'
   - '+.pinqugongxiangktv.com'
+  - '+.pinqukeji.com'
   - '+.pinshan.com'
   - '+.pinshu.com'
   - '+.pintu360.com'
@@ -42775,7 +42773,6 @@ payload:
   - '+.qgsdue.cfd'
   - '+.qgsydw.com'
   - '+.qgtql.com'
-  - '+.qguiyang.com'
   - '+.qgvps.com'
   - '+.qgw.tm'
   - '+.qgxl.org'
@@ -43379,7 +43376,6 @@ payload:
   - '+.qiyeshangpu.com'
   - '+.qiyeshangpu.net'
   - '+.qiyetong.com'
-  - '+.qiyetuozhan.com'
   - '+.qiyeweixin.com'
   - '+.qiyewenhua.net'
   - '+.qiyeyougou.com'
@@ -43406,7 +43402,6 @@ payload:
   - '+.qiyukf.net'
   - '+.qiyukid.com'
   - '+.qiyuntong.com'
-  - '+.qiyunworld.com'
   - '+.qiyutianxia.com'
   - '+.qizhanming.com'
   - '+.qizheplay.com'
@@ -44017,7 +44012,6 @@ payload:
   - '+.quyuansu.com'
   - '+.quyundong.com'
   - '+.quzhiwen.com'
-  - '+.quzhuanpan.com'
   - '+.quzhuanxiang.com'
   - '+.quzz88.com'
   - '+.quzzgames.com'
@@ -44875,6 +44869,7 @@ payload:
   - '+.rrl360.com'
   - '+.rrmeiju.com'
   - '+.rrmj.tv'
+  - '+.rrmrm.com'
   - '+.rrppt.com'
   - '+.rrr.me'
   - '+.rrrdai.com'
@@ -45343,7 +45338,6 @@ payload:
   - '+.saowen.net'
   - '+.sap-nj.com'
   - '+.sap1000.com'
-  - '+.sapjx.com'
   - '+.saraba1st.com'
   - '+.sarft.net'
   - '+.sass.hk'
@@ -46905,6 +46899,7 @@ payload:
   - '+.shuame.com'
   - '+.shuanghui.net'
   - '+.shuangkuai.co'
+  - '+.shuangliusc.com'
   - '+.shuangmatbs.com'
   - '+.shuangmei2008.com'
   - '+.shuangtao.com'
@@ -47045,7 +47040,6 @@ payload:
   - '+.shuoshuokong.org'
   - '+.shuotiancn2012.com'
   - '+.shuowan.com'
-  - '+.shuowan.net'
   - '+.shupaiyun.com'
   - '+.shuqi.com'
   - '+.shuqiaozt.com'
@@ -47429,7 +47423,6 @@ payload:
   - '+.siwazywcdn2.com'
   - '+.siwazywcdn3.com'
   - '+.siwazywimg.com'
-  - '+.siwei.me'
   - '+.siweidaotu.com'
   - '+.siweiearth.com'
   - '+.siweikongjian.net'
@@ -47810,6 +47803,7 @@ payload:
   - '+.sniec.net'
   - '+.snieri.com'
   - '+.snimay.com'
+  - '+.snipurl.cc'
   - '+.snjairport.com'
   - '+.snjbs.com'
   - '+.snjjiu.com'
@@ -53754,7 +53748,6 @@ payload:
   - '+.wanyunshuju.com'
   - '+.wanyuwang.com'
   - '+.wanyxbox.com'
-  - '+.wanzhao.com'
   - '+.wanzhoumo.com'
   - '+.wanzhuang.com'
   - '+.wanzhuangkj.com'
@@ -54617,6 +54610,7 @@ payload:
   - '+.whfengli.com'
   - '+.whflfa.com'
   - '+.whfyhouse.com'
+  - '+.whg6.com'
   - '+.whgaodu.com'
   - '+.whgaopeng.com'
   - '+.whggjk.com'
@@ -55569,7 +55563,6 @@ payload:
   - '+.wsloan.com'
   - '+.wsltt.com'
   - '+.wsmaoyi.com'
-  - '+.wsmaoyi.net'
   - '+.wsonh.com'
   - '+.wsound.cc'
   - '+.wsoversea.info'
@@ -56942,6 +56935,7 @@ payload:
   - '+.xiaoxintuku.com'
   - '+.xiaoxiongmeishu.com'
   - '+.xiaoxiongyouhao.com'
+  - '+.xiaoxiuapp.com'
   - '+.xiaoxue123.com'
   - '+.xiaoyantong.com'
   - '+.xiaoyaoyou.com'
@@ -58193,7 +58187,6 @@ payload:
   - '+.xuexigang.com'
   - '+.xuexila.com'
   - '+.xuexili.com'
-  - '+.xuexilinux.com'
   - '+.xuexin365.com'
   - '+.xuexiniu.com'
   - '+.xuexitong.com'
@@ -58680,6 +58673,7 @@ payload:
   - '+.yangmao.info'
   - '+.yangmaohao.net'
   - '+.yangner.com'
+  - '+.yangpanzg.com'
   - '+.yangqianguan.com'
   - '+.yangqimanhua.com'
   - '+.yangqq.com'
@@ -61253,7 +61247,6 @@ payload:
   - '+.yxhenan.com'
   - '+.yxhhdl.com'
   - '+.yxhi.com'
-  - '+.yxhjt.com'
   - '+.yxhqj.com'
   - '+.yxi.cc'
   - '+.yxiangzu.com'
