--- a/directbak.yaml
+++ b/directbak.yaml
@@ -6107,7 +6107,6 @@ payload:
   - '+.8tupian.com'
   - '+.8twan.com'
   - '+.8u58.com'
-  - '+.8uka.com'
   - '+.8uyx.com'
   - '+.8wan.com'
   - '+.8win.net'
@@ -8475,6 +8474,7 @@ payload:
   - '+.aocde.com'
   - '+.aocdn.com'
   - '+.aoch.com'
+  - '+.aochengcdn.com'
   - '+.aoclia.com'
   - '+.aocslb.com'
   - '+.aodabo.tech'
@@ -41178,7 +41178,6 @@ payload:
   - '+.panasonicmall.com'
   - '+.panchuang.net'
   - '+.panda-home.com'
-  - '+.panda321.com'
   - '+.panda98.com'
   - '+.pandadastudio.com'
   - '+.pandafoundation.org'
@@ -60723,6 +60722,7 @@ payload:
   - '+.yuebei.vip'
   - '+.yuebingcheng.com'
   - '+.yuebooemt.com'
+  - '+.yuecdn.net'
   - '+.yuecheng.com'
   - '+.yuedaoec.com'
   - '+.yuedisk.com'
@@ -60763,6 +60763,7 @@ payload:
   - '+.yuesuoping.com'
   - '+.yuetu.tech'
   - '+.yuetutu.com'
+  - '+.yuetuvip.com'
   - '+.yuetuvip.net'
   - '+.yuetx.cc'
   - '+.yueweimusic.com'
@@ -61174,7 +61175,6 @@ payload:
   - '+.yuzhulin.com'
   - '+.yuzi.net'
   - '+.yuzvf.com'
-  - '+.yveqi.com'
   - '+.yvv.in'
   - '+.yvzfgigpiwmofux.com'
   - '+.yw11.com'
