--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1050,6 +1050,7 @@ payload:
   - '+.126g.com'
   - '+.126qiye.com'
   - '+.126z.net'
+  - '+.127-server.xyz'
   - '+.127.net'
   - '+.1278721.com'
   - '+.127xx.com'
@@ -2146,6 +2147,7 @@ payload:
   - '+.24haowan.com'
   - '+.24hmb.com'
   - '+.24k99.com'
+  - '+.24kdh.com'
   - '+.24ker.com'
   - '+.24kplus.com'
   - '+.24kwx.com'
@@ -3185,7 +3187,6 @@ payload:
   - '+.400301.com'
   - '+.40046aa.com'
   - '+.400516.com'
-  - '+.4006024680.com'
   - '+.4006026717.com'
   - '+.4006055885.com'
   - '+.4006216888.com'
@@ -3688,6 +3689,7 @@ payload:
   - '+.51fanli.com'
   - '+.51fanli.net'
   - '+.51feibao.com'
+  - '+.51finace.com'
   - '+.51findshop.com'
   - '+.51flrc.com'
   - '+.51fpg.com'
@@ -5263,7 +5265,6 @@ payload:
   - '+.6xw.com'
   - '+.6y6s066.com'
   - '+.6yoo.com'
-  - '+.6yu6.com'
   - '+.6yuexi.com'
   - '+.6yxk.com'
   - '+.6yyy7.com'
@@ -5845,6 +5846,7 @@ payload:
   - '+.8587.se'
   - '+.85878078.com'
   - '+.858game.com'
+  - '+.85ibb.com'
   - '+.85kf.com'
   - '+.85wp.com'
   - '+.85xt.com'
@@ -9408,6 +9410,7 @@ payload:
   - '+.baihephoto.com'
   - '+.baihexs.com'
   - '+.baihong.com'
+  - '+.baihuaju.net'
   - '+.baihui.com'
   - '+.baihui168.com'
   - '+.baihuillq.com'
@@ -9437,6 +9440,7 @@ payload:
   - '+.baikemy.com'
   - '+.baikemy.net'
   - '+.baikeshiji.com'
+  - '+.baikevod.com'
   - '+.baikezh.com'
   - '+.bailiaijia.com'
   - '+.bailiangroup.com'
@@ -11381,6 +11385,7 @@ payload:
   - '+.botocard.com'
   - '+.botongr.com'
   - '+.botorange.com'
+  - '+.botsfy.com'
   - '+.botslab.com'
   - '+.bouffalolab.com'
   - '+.boweifeng.com'
@@ -11603,6 +11608,7 @@ payload:
   - '+.bugumanhua.com'
   - '+.bugutime.com'
   - '+.bugxia.com'
+  - '+.buhuixiao.com'
   - '+.buhuyo.com'
   - '+.build-decor.com'
   - '+.buildface.com'
@@ -11769,6 +11775,7 @@ payload:
   - '+.bymz.net'
   - '+.bynmc.com'
   - '+.bynsyh.com'
+  - '+.bypanghu.xyz'
   - '+.byprxy.com'
   - '+.byqcxy.com'
   - '+.byr-navi.com'
@@ -12149,6 +12156,7 @@ payload:
   - '+.canwaysoft.com'
   - '+.canxingmedia.com'
   - '+.canyidian.com'
+  - '+.canyin.cc'
   - '+.canyin.com'
   - '+.canyin168.com'
   - '+.canyin2017.com'
@@ -16568,6 +16576,7 @@ payload:
   - '+.cxwyf.net'
   - '+.cxwyg.net'
   - '+.cxxjs.com'
+  - '+.cxy521.com'
   - '+.cxy61.com'
   - '+.cxy7.com'
   - '+.cxyfjy.com'
@@ -17248,6 +17257,7 @@ payload:
   - '+.dayin.la'
   - '+.dayinhu.com'
   - '+.dayinjiqudong.com'
+  - '+.dayinmao.com'
   - '+.dayinpai.com'
   - '+.dayinpiano.com'
   - '+.dayitong.net'
@@ -20122,6 +20132,7 @@ payload:
   - '+.emdl.ws.microsoft.com'
   - '+.emea.cdnetworks.com'
   - '+.emeixs.com'
+  - '+.emen.ltd'
   - '+.emepu.com'
   - '+.emilhk.com'
   - '+.emjob.com'
@@ -20651,6 +20662,7 @@ payload:
   - '+.exsvc.net'
   - '+.ext2fsd.com'
   - '+.extbrand.com'
+  - '+.extfans.com'
   - '+.exthin.net'
   - '+.extmail.org'
   - '+.extron-tech.com'
@@ -21041,6 +21053,7 @@ payload:
   - '+.fanyishang.com'
   - '+.fanypcb.com'
   - '+.fanyu.com'
+  - '+.fanyu.work'
   - '+.fanyueciyuan.info'
   - '+.fanyuip.com'
   - '+.fanzehua.com'
@@ -21603,6 +21616,7 @@ payload:
   - '+.fishings.biz'
   - '+.fishlee.net'
   - '+.fishmobi.com'
+  - '+.fishs.com'
   - '+.fishtui.com'
   - '+.fit-start.co'
   - '+.fit-time.com'
@@ -24893,6 +24907,7 @@ payload:
   - '+.hangzhoufcw.com'
   - '+.hangzhouluohu.com'
   - '+.hangzhoutianqi114.com'
+  - '+.hangzhouyiyao.com'
   - '+.hangzhouzhiqi.com'
   - '+.hanhai.net'
   - '+.hanhaiqikan.com'
@@ -25131,6 +25146,7 @@ payload:
   - '+.haoshipin123.com'
   - '+.haoshiqi.net'
   - '+.haoshsh.com'
+  - '+.haoshuang.site'
   - '+.haoshunjx.com'
   - '+.haoshuo.com'
   - '+.haosijia.com'
@@ -26242,6 +26258,7 @@ payload:
   - '+.hjdns.net'
   - '+.hjdzn.com'
   - '+.hjenglish.com'
+  - '+.hjfzj.com'
   - '+.hjgcd.com'
   - '+.hjhrcloud.com'
   - '+.hjido.com'
@@ -27358,6 +27375,7 @@ payload:
   - '+.huayijiahe.com'
   - '+.huayimedia.com'
   - '+.huayiming.com'
+  - '+.huayingrc.com'
   - '+.huayinguolv.com'
   - '+.huayinjapan.com'
   - '+.huayiwork.com'
@@ -29622,7 +29640,6 @@ payload:
   - '+.iqunix.store'
   - '+.iqupdate.com'
   - '+.iqushai.com'
-  - '+.iquwang.com'
   - '+.iqxbf.com'
   - '+.iqxedu.com'
   - '+.iqycamp.com'
@@ -30630,6 +30647,7 @@ payload:
   - '+.jialiangad.com'
   - '+.jialidun.com'
   - '+.jialingmm.net'
+  - '+.jialunkj.com'
   - '+.jiamei123.com'
   - '+.jiameng.com'
   - '+.jiameng001.com'
@@ -32810,6 +32828,7 @@ payload:
   - '+.kaoqintong.net'
   - '+.kaoqinyi.com'
   - '+.kaoruo.com'
+  - '+.kaoshenzazhi.com'
   - '+.kaoshi110.net'
   - '+.kaoshi365.com'
   - '+.kaoshibaike.com'
@@ -34447,6 +34466,7 @@ payload:
   - '+.lc-cn-n1-shared.com'
   - '+.lc-cn-n1-thovg.com'
   - '+.lc-news.com'
+  - '+.lc1001.com'
   - '+.lc123.net'
   - '+.lc787.com'
   - '+.lcbdf.net'
@@ -34961,7 +34981,6 @@ payload:
   - '+.lianjixia.com'
   - '+.liankaa.com'
   - '+.liankebio.com'
-  - '+.liankexing.com'
   - '+.lianle.com'
   - '+.lianlianlvyou.com'
   - '+.lianlianpay.com'
@@ -36984,6 +37003,7 @@ payload:
   - '+.maoercdn.com'
   - '+.maoflag.net'
   - '+.maogepingbeauty.com'
+  - '+.maogumaogu.com'
   - '+.maogx.win'
   - '+.maoha.com'
   - '+.maohaha.com'
@@ -37609,6 +37629,7 @@ payload:
   - '+.mfexcel.com'
   - '+.mfgchn.com'
   - '+.mfisp.com'
+  - '+.mfjgsrad.cfd'
   - '+.mfjxcn.com'
   - '+.mfk.com'
   - '+.mfpad.com'
@@ -37950,6 +37971,7 @@ payload:
   - '+.mingdaocloud.com'
   - '+.mingdongman.com'
   - '+.mingfengtang.com'
+  - '+.mingfucdn.com'
   - '+.minghuatang.com'
   - '+.mingin.com'
   - '+.mingjian.com'
@@ -38826,6 +38848,7 @@ payload:
   - '+.muxiulin.com'
   - '+.muyangkuaibao.com'
   - '+.muyee.com'
+  - '+.muyeseed.com'
   - '+.muyewx.com'
   - '+.muying.com'
   - '+.muyingjie.com'
@@ -40033,6 +40056,7 @@ payload:
   - '+.nomax.vip'
   - '+.nome.com'
   - '+.nonganxian.com'
+  - '+.nongbaike.net'
   - '+.nongcun5.com'
   - '+.nongfen.com'
   - '+.nongfujing.com'
@@ -44885,6 +44909,7 @@ payload:
   - '+.rrxiu.cc'
   - '+.rrxiu.me'
   - '+.rrxiu.net'
+  - '+.rrxiuh5.cc'
   - '+.rrys.tv'
   - '+.rrzu.com'
   - '+.rrzuji.com'
@@ -47047,6 +47072,7 @@ payload:
   - '+.shuqireader.com'
   - '+.shuqistat.com'
   - '+.shuquge.com'
+  - '+.shuquge.la'
   - '+.shuqun.com'
   - '+.shuquta.com'
   - '+.shuqw.com'
@@ -47666,6 +47692,7 @@ payload:
   - '+.smart-ptt.com'
   - '+.smart-rise.com'
   - '+.smart4e.com'
+  - '+.smartbgp.com'
   - '+.smartcityzhejiang.com'
   - '+.smartcloudcon.com'
   - '+.smartdeep.com'
@@ -49304,6 +49331,7 @@ payload:
   - '+.szgymz.com'
   - '+.szhdyic.com'
   - '+.szhetai.com'
+  - '+.szhfwd.com'
   - '+.szhgh.com'
   - '+.szhh8.com'
   - '+.szhiross.com'
@@ -52823,6 +52851,7 @@ payload:
   - '+.vechain.com'
   - '+.vectorplaces.com'
   - '+.vedamobi.com'
+  - '+.vedcdnlb.com'
   - '+.vedeng.com'
   - '+.veding.com'
   - '+.vediotalk.com'
@@ -53739,6 +53768,7 @@ payload:
   - '+.wanyol.com'
   - '+.wanyoo.com'
   - '+.wanyoucn.com'
+  - '+.wanyouw.com'
   - '+.wanyouxi7.com'
   - '+.wanyuanxiang.com'
   - '+.wanyuenet.com'
@@ -56072,11 +56102,13 @@ payload:
   - '+.x-mol.com'
   - '+.x-plans.com'
   - '+.x0769.com'
+  - '+.x11263.com'
   - '+.x118.net'
   - '+.x12plus.com'
   - '+.x1340.com'
   - '+.x158.tv'
   - '+.x1997.net'
+  - '+.x23118.com'
   - '+.x23119.com'
   - '+.x23qb.com'
   - '+.x23us.me'
@@ -56453,6 +56485,7 @@ payload:
   - '+.xggjj.com'
   - '+.xghylt.com'
   - '+.xgimi.com'
+  - '+.xgimi.net'
   - '+.xgiu.com'
   - '+.xgj-info.com'
   - '+.xgjiu.com'
@@ -57810,6 +57843,7 @@ payload:
   - '+.xmylhy.com'
   - '+.xmzangao.com'
   - '+.xmzdls.com'
+  - '+.xmzjjl.com'
   - '+.xmzmmr.com'
   - '+.xmzsyg.com'
   - '+.xmzylh.com'
@@ -57943,6 +57977,7 @@ payload:
   - '+.xrvm.com'
   - '+.xrwcn.com'
   - '+.xrxr.xyz'
+  - '+.xrzww.com'
   - '+.xs-servers.com'
   - '+.xs.la'
   - '+.xs123.net'
@@ -58579,6 +58614,7 @@ payload:
   - '+.y1995.com'
   - '+.y2002.com'
   - '+.y5663.com'
+  - '+.y5kfpt.com'
   - '+.y6162.com'
   - '+.y7q8.com'
   - '+.y80s.com'
@@ -59400,6 +59436,7 @@ payload:
   - '+.yimeng.com'
   - '+.yimengmusic.com'
   - '+.yimenonline.com'
+  - '+.yimenseo.net'
   - '+.yimenyun.net'
   - '+.yimian.xyz'
   - '+.yimianmian.com'
@@ -60204,6 +60241,7 @@ payload:
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
+  - '+.youlianfuwu.com'
   - '+.youliangda.com'
   - '+.youliaobaike.com'
   - '+.youliaoyi.com'
@@ -60798,6 +60836,7 @@ payload:
   - '+.yugew.com'
   - '+.yuguo.us'
   - '+.yugusoft.com'
+  - '+.yuhaiyiya.com'
   - '+.yuheii.com'
   - '+.yuheng.tech'
   - '+.yuhengye.com'
@@ -63900,7 +63939,6 @@ payload:
   - '+.zx990.com'
   - '+.zxblinux.com'
   - '+.zxbzr.com'
-  - '+.zxclqw.com'
   - '+.zxcmk.com'
   - '+.zxcoder.com'
   - '+.zxd.com'
@@ -64084,7 +64122,6 @@ payload:
   - '+.zzidc.com'
   - '+.zzjunzhi.com'
   - '+.zzjxbg.com'
-  - '+.zzkiss000.com'
   - '+.zzliot.com'
   - '+.zzllq.com'
   - '+.zzloop.com'
